@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.jarFinder;
 
 import com.intellij.ide.JavaUiBundle;
@@ -27,6 +13,7 @@ import com.intellij.openapi.roots.OrderRootType;
 import com.intellij.openapi.roots.libraries.Library;
 import com.intellij.openapi.roots.ui.configuration.LibrarySourceRootDetectorUtil;
 import com.intellij.openapi.util.ActionCallback;
+import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.vfs.JarFileSystem;
 import com.intellij.openapi.vfs.LocalFileSystem;
@@ -36,36 +23,79 @@ import com.intellij.psi.PsiFile;
 import com.intellij.util.SystemProperties;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.io.HttpRequests;
+import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.*;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.regex.Pattern;
 
-/**
- * @author Sergey Evdokimov
- */
-public class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
-  private static final Logger LOG = Logger.getInstance(InternetAttachSourceProvider.class);
-  private static final Pattern ARTIFACT_IDENTIFIER = Pattern.compile("[A-Za-z0-9\\.\\-_]+");
+public final class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
 
-  @NotNull
+  private static final Logger LOG = Logger.getInstance(InternetAttachSourceProvider.class);
+  private static final Pattern ARTIFACT_IDENTIFIER = Pattern.compile("[A-Za-z0-9.\\-_]+");
+
+  private record MavenCoords(String artifactId, String version) {
+  }
+
+  private static MavenCoords parsePath(VirtualFile jar) {
+    String jarName = jar.getNameWithoutExtension();
+
+    var parent1 = jar.getParent();
+    if (parent1 == null) return null;
+
+    var parent2 = parent1.getParent();
+    if (parent2 == null) return null;
+
+    var artifactId= parent2.getName();
+    var version = parent1.getName();
+
+    String jarPathName = artifactId + "-" + version;
+    if (!jarPathName.equals(jarName)) return null;
+
+    return new MavenCoords(artifactId, version);
+  }
+
+  private static MavenCoords parseName(VirtualFile jar) {
+    String jarName = jar.getNameWithoutExtension();
+    int index = jarName.lastIndexOf('-');
+    if (index == -1) return null;
+
+    String version = jarName.substring(index + 1);
+    String artifactId = jarName.substring(0, index);
+
+    return new MavenCoords(artifactId, version);
+  }
+
+  private static MavenCoords parse(VirtualFile jar) {
+    var result = parsePath(jar);
+    if (null != result) return result;
+
+    return parseName(jar);
+  }
+
   @Override
-  public Collection<AttachSourcesAction> getActions(List<LibraryOrderEntry> orderEntries, @Nullable PsiFile psiFile) {
+  public @NotNull Collection<? extends AttachSourcesAction> getActions(@NotNull List<? extends LibraryOrderEntry> orderEntries,
+                                                                       @NotNull PsiFile psiFile) {
     final VirtualFile jar = getJarByPsiFile(psiFile);
-    if (jar == null) return Collections.emptyList();
+    if (jar == null) return List.of();
 
     final String jarName = jar.getNameWithoutExtension();
     int index = jarName.lastIndexOf('-');
-    if (index == -1) return Collections.emptyList();
+    if (index == -1) return List.of();
 
-    final String version = jarName.substring(index + 1);
-    final String artifactId = jarName.substring(0, index);
+    MavenCoords mavenCoords = parse(jar);
+    if (null == mavenCoords) return List.of();
+
+    String artifactId = mavenCoords.artifactId();
+    String version = mavenCoords.version();
 
     if (!ARTIFACT_IDENTIFIER.matcher(version).matches() || !ARTIFACT_IDENTIFIER.matcher(artifactId).matches()) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     final Set<Library> libraries = new HashSet<>();
@@ -73,7 +103,7 @@ public class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
       ContainerUtil.addIfNotNull(libraries, orderEntry.getLibrary());
     }
 
-    if (libraries.isEmpty()) return Collections.emptyList();
+    if (libraries.isEmpty()) return List.of();
 
     final String sourceFileName = jarName + "-sources.jar";
 
@@ -81,7 +111,7 @@ public class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
       for (VirtualFile file : library.getFiles(OrderRootType.SOURCES)) {
         if (file.getPath().contains(sourceFileName)) {
           if (isRootInExistingFile(file)) {
-            return Collections.emptyList(); // Sources already attached, but source-jar doesn't contain current class.
+            return List.of(); // Sources already attached, but source-jar doesn't contain current class.
           }
         }
       }
@@ -92,10 +122,10 @@ public class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
     final File sourceFile = new File(libSourceDir, sourceFileName);
 
     if (sourceFile.exists()) {
-      return Collections.singleton(new LightAttachSourcesAction() {
+      return List.of(new LightAttachSourcesAction() {
         @Override
-        public String getName() {
-          return "Attach downloaded source";
+        public @NlsContexts.LinkLabel @Nls(capitalization = Nls.Capitalization.Title) String getName() {
+          return JavaUiBundle.message("internet.attach.source.provider.name");
         }
 
         @Override
@@ -103,27 +133,28 @@ public class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
           return getName();
         }
 
+
         @Override
-        public ActionCallback perform(List<LibraryOrderEntry> orderEntriesContainingFile) {
+        public @NotNull ActionCallback perform(@NotNull List<? extends LibraryOrderEntry> orderEntriesContainingFile) {
           attachSourceJar(sourceFile, libraries);
           return ActionCallback.DONE;
         }
       });
     }
 
-    return Collections.singleton(new LightAttachSourcesAction() {
+    return List.of(new LightAttachSourcesAction() {
       @Override
-      public String getName() {
-        return "Download...";
+      public @Nls(capitalization = Nls.Capitalization.Title) String getName() {
+        return JavaUiBundle.message("internet.attach.source.provider.action.name");
       }
 
       @Override
       public String getBusyText() {
-        return "Searching...";
+        return JavaUiBundle.message("internet.attach.source.provider.action.busy.text");
       }
 
       @Override
-      public ActionCallback perform(List<LibraryOrderEntry> orderEntriesContainingFile) {
+      public @NotNull ActionCallback perform(@NotNull List<? extends LibraryOrderEntry> orderEntriesContainingFile) {
         final Task task = new Task.Modal(psiFile.getProject(), JavaUiBundle.message("progress.title.searching.source"), true) {
           @Override
           public void run(@NotNull final ProgressIndicator indicator) {
@@ -136,7 +167,8 @@ public class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
               }
               catch (SourceSearchException e) {
                 LOG.warn(e);
-                showMessage("Downloading failed", e.getMessage(), NotificationType.ERROR);
+                final String title = JavaUiBundle.message("internet.attach.source.provider.action.notification.title.downloading.failed");
+                showMessage(title, e.getMessage(), NotificationType.ERROR);
                 continue;
               }
 
@@ -144,12 +176,16 @@ public class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
             }
 
             if (artifactUrl == null) {
-              showMessage("Sources not found", "Sources for '" + jarName + ".jar' not found", NotificationType.WARNING);
+              showMessage(JavaUiBundle.message("internet.attach.source.provider.action.notification.title.sources.not.found"),
+                          JavaUiBundle.message("internet.attach.source.provider.action.notification.content.sources.for.jar.not.found", jarName),
+                          NotificationType.WARNING);
               return;
             }
 
             if (!(libSourceDir.isDirectory() || libSourceDir.mkdirs())) {
-              showMessage("Downloading failed", "Failed to create directory to store sources: " + libSourceDir, NotificationType.ERROR);
+              showMessage(JavaUiBundle.message("internet.attach.source.provider.action.notification.title.downloading.failed"),
+                          JavaUiBundle.message("internet.attach.source.provider.action.notification.content.failed.to.create.directory", libSourceDir),
+                          NotificationType.ERROR);
               return;
             }
 
@@ -162,7 +198,9 @@ public class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
             }
             catch (IOException e) {
               LOG.warn(e);
-              showMessage("Downloading failed", "Connection problem. See log for more details.", NotificationType.ERROR);
+              showMessage(JavaUiBundle.message("internet.attach.source.provider.action.notification.title.downloading.failed"),
+                          JavaUiBundle.message("internet.attach.source.provider.action.notification.content.connection.problem"),
+                          NotificationType.ERROR);
             }
           }
 
@@ -171,7 +209,9 @@ public class InternetAttachSourceProvider extends AbstractAttachSourceProvider {
             attachSourceJar(sourceFile, libraries);
           }
 
-          private void showMessage(String title, String message, NotificationType notificationType) {
+          private void showMessage(@NlsContexts.NotificationTitle String title,
+                                   @NlsContexts.NotificationContent String message,
+                                   NotificationType notificationType) {
             new Notification("Source searcher", title, message, notificationType).notify(getProject());
           }
         };
