@@ -15,6 +15,7 @@ import org.jetbrains.annotations.NotNull;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 /**
@@ -35,7 +36,7 @@ public class ArtifactoryRepositoryService extends MavenRepositoryService {
   @NotNull
   @Override
   public List<RemoteRepositoryDescription> getRepositories(@NotNull String url) throws IOException {
-    assert !ApplicationManager.getApplication().isDispatchThread();
+    ApplicationManager.getApplication().assertIsNonDispatchThread();
     try {
       ArtifactoryModel.RepositoryType[] repos = gson.fromJson(
         HttpRequests.request(toUrl(url, "repositories"))
@@ -65,7 +66,7 @@ public class ArtifactoryRepositoryService extends MavenRepositoryService {
   @Override
   public List<RepositoryArtifactDescription> findArtifacts(@NotNull String url, @NotNull RepositoryArtifactDescription template)
     throws IOException {
-    assert !ApplicationManager.getApplication().isDispatchThread();
+    ApplicationManager.getApplication().assertIsNonDispatchThread();
     try {
 
 
@@ -93,7 +94,7 @@ public class ArtifactoryRepositoryService extends MavenRepositoryService {
 
     String className = template.getClassNames();
     final String searchString = className.endsWith("*") || className.endsWith("?") ? className : className + ".class";
-    Url requestUrl = toUrl(url, "search/archive", "name=" + URLEncoder.encode(searchString.trim(), "UTF-8"));
+    Url requestUrl = toUrl(url, "search/archive", "name=" + URLEncoder.encode(searchString.trim(), StandardCharsets.UTF_8));
     ArtifactoryModel.ArchiveResults results = gson.fromJson(
       HttpRequests.request(requestUrl)
         .productNameAsUserAgent().readString(),
