@@ -1,16 +1,19 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.cmdline;
 
 import com.google.gson.Gson;
 import com.google.protobuf.Message;
 import com.intellij.compiler.notNullVerification.NotNullVerifyingInstrumenter;
+import com.intellij.openapi.application.ClassPathUtil;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.SystemInfoRt;
+import com.intellij.openapi.util.io.FileUtilRt;
+import com.intellij.platform.runtime.repository.RuntimeModuleRepository;
+import com.intellij.tracing.Tracer;
 import com.intellij.uiDesigner.compiler.AlienFormFileException;
 import com.intellij.uiDesigner.core.GridConstraints;
 import com.intellij.util.SystemProperties;
-import com.intellij.util.containers.ContainerUtil;
 import com.jgoodies.forms.layout.CellConstraints;
 import com.thoughtworks.qdox.JavaProjectBuilder;
 import io.netty.buffer.ByteBufAllocator;
@@ -19,75 +22,125 @@ import io.netty.handler.codec.protobuf.ProtobufDecoder;
 import io.netty.resolver.AddressResolverGroup;
 import io.netty.util.NetUtil;
 import net.n3.nanoxml.IXMLBuilder;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.jetbrains.idea.maven.aether.ArtifactRepositoryManager;
 import org.jetbrains.jps.builders.impl.java.EclipseCompilerTool;
 import org.jetbrains.jps.builders.java.JavaCompilingTool;
 import org.jetbrains.jps.builders.java.JavaSourceTransformer;
 import org.jetbrains.jps.javac.ExternalJavacProcess;
+import org.jetbrains.jps.javac.ast.JavacReferenceCollector;
 import org.jetbrains.jps.model.JpsModel;
 import org.jetbrains.jps.model.impl.JpsModelImpl;
 import org.jetbrains.jps.model.serialization.JpsProjectLoader;
 import org.jetbrains.org.objectweb.asm.ClassVisitor;
 import org.jetbrains.org.objectweb.asm.ClassWriter;
+import org.jetbrains.xxh3.Xxh3;
 
-import javax.tools.*;
+import javax.tools.JavaCompiler;
+import javax.tools.ToolProvider;
 import java.io.File;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
+import java.util.function.Consumer;
 
 /**
  * @author Eugene Zhuravlev
  */
-public class ClasspathBootstrap {
+public final class ClasspathBootstrap {
   private static final Logger LOG = Logger.getInstance(ClasspathBootstrap.class);
 
   private ClasspathBootstrap() { }
 
   private static final Class<?>[] COMMON_REQUIRED_CLASSES = {
-    Message.class, // protobuf
     NetUtil.class, // netty common
     EventLoopGroup.class, // netty transport
     AddressResolverGroup.class, // netty resolver
     ByteBufAllocator.class, // netty buffer
     ProtobufDecoder.class,  // netty codec
+    Message.class, // protobuf
   };
 
-  public static List<String> getBuildProcessApplicationClasspath() {
-    final Set<String> cp = new HashSet<>();
+  private static final String[] REFLECTION_OPEN_PACKAGES = {
+    // needed for jps core functioning
+    "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+    "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
 
-    cp.add(getResourcePath(BuildMain.class));
-    cp.add(getResourcePath(ExternalJavacProcess.class));  // intellij.platform.jps.build.javac.rt part
+    // needed for some lombok and google errorprone compiler versions to function
+    "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+    "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+    "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+    "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+    "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+    "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+    "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+    "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED"
+  };
 
-    cp.addAll(PathManager.getUtilClassPath()); // intellij.platform.util
+  private static final String DEFAULT_MAVEN_REPOSITORY_PATH = ".m2/repository";
 
-    for (Class<?> aClass : COMMON_REQUIRED_CLASSES) {
-      cp.add(getResourcePath(aClass));
+  private static void addToClassPath(Class<?> aClass, Set<String> result) {
+    Path path = PathManager.getJarForClass(aClass);
+    if (path == null) {
+      return;
     }
 
-    cp.add(getResourcePath(ClassWriter.class));  // asm
-    cp.add(getResourcePath(ClassVisitor.class));  // asm-commons
-    cp.add(getResourcePath(JpsModel.class));  // intellij.platform.jps.model
-    cp.add(getResourcePath(JpsModelImpl.class));  // intellij.platform.jps.model.impl
-    cp.add(getResourcePath(JpsProjectLoader.class));  // intellij.platform.jps.model.serialization
-    cp.add(getResourcePath(AlienFormFileException.class));  // intellij.java.guiForms.compiler
-    cp.add(getResourcePath(GridConstraints.class));  // intellij.java.guiForms.rt
-    cp.add(getResourcePath(CellConstraints.class));  // jGoodies-forms
+    final String pathString = path.toString();
+
+    if (result.add(pathString) && pathString.endsWith("app.jar") && path.getFileName().toString().equals("app.jar")) {
+      if (path.getParent().equals(Paths.get(PathManager.getLibPath()))) {
+        LOG.error("Due to " + aClass.getName() + " requirement, inappropriate " + pathString + " is added to build process classpath");
+      }
+    }
+  }
+
+  private static void addToClassPath(Set<String> cp, @NotNull Class<?> @NotNull [] classes) {
+    for (Class<?> aClass : classes) {
+      addToClassPath(aClass, cp);
+    }
+  }
+
+  public static @NotNull Collection<String> getBuildProcessApplicationClasspath() {
+    // predictable order
+    Set<String> cp = new LinkedHashSet<>();
+
+    addToClassPath(BuildMain.class, cp);
+    addToClassPath(ExternalJavacProcess.class, cp);  // intellij.platform.jps.build.javac.rt part
+    addToClassPath(JavacReferenceCollector.class, cp);  // jps-javac-extension library
+
+    // intellij.platform.util
+    addToClassPath(cp, ClassPathUtil.getUtilClasses());
+
+    ClassPathUtil.addKotlinStdlib(cp);
+    addToClassPath(cp, COMMON_REQUIRED_CLASSES);
+
+    addToClassPath(ClassWriter.class, cp);  // asm
+    addToClassPath(ClassVisitor.class, cp);  // asm-commons
+    addToClassPath(RuntimeModuleRepository.class, cp); // intellij.platform.runtime.repository
+    addToClassPath(JpsModel.class, cp);  // intellij.platform.jps.model
+    addToClassPath(JpsModelImpl.class, cp);  // intellij.platform.jps.model.impl
+    addToClassPath(JpsProjectLoader.class, cp);  // intellij.platform.jps.model.serialization
+    addToClassPath(AlienFormFileException.class, cp);  // intellij.java.guiForms.compiler
+    addToClassPath(GridConstraints.class, cp);  // intellij.java.guiForms.rt
+    addToClassPath(CellConstraints.class, cp);  // jGoodies-forms
     cp.addAll(getInstrumentationUtilRoots());
-    cp.add(getResourcePath(IXMLBuilder.class));  // nano-xml
-    cp.add(getResourcePath(JavaProjectBuilder.class));  // QDox lightweight java parser
-    cp.add(getResourcePath(Gson.class));  // gson
+    addToClassPath(IXMLBuilder.class, cp);  // nano-xml
+    addToClassPath(JavaProjectBuilder.class, cp);  // QDox lightweight java parser
+    addToClassPath(Gson.class, cp);  // gson
+    addToClassPath(Xxh3.class, cp);
 
-    cp.addAll(ContainerUtil.map(ArtifactRepositoryManager.getClassesFromDependencies(), ClasspathBootstrap::getResourcePath));
-
-    cp.addAll(getJavac8RefScannerClasspath());
-    //don't forget to update CommunityStandaloneJpsBuilder.layoutJps accordingly
+    addToClassPath(cp, ArtifactRepositoryManager.getClassesFromDependencies());
+    addToClassPath(Tracer.class, cp); // tracing infrastructure
 
     try {
-      final Class<?> cmdLineWrapper = Class.forName("com.intellij.rt.execution.CommandLineWrapper");
-      cp.add(getResourcePath(cmdLineWrapper));  // idea_rt.jar
+      Class<?> cmdLineWrapper = Class.forName("com.intellij.rt.execution.CommandLineWrapper");
+      addToClassPath(cmdLineWrapper, cp);  // idea_rt.jar
     }
     catch (Throwable ignored) { }
 
-    return new ArrayList<>(cp);
+    return cp;
   }
 
   public static void appendJavaCompilerClasspath(Collection<? super String> cp, boolean includeEcj) {
@@ -100,12 +153,11 @@ public class ClasspathBootstrap {
   }
 
   public static List<File> getExternalJavacProcessClasspath(String sdkHome, JavaCompilingTool compilingTool) {
+    // Important! All dependencies must be java 6 compatible (the oldest supported javac to be launched)
     final Set<File> cp = new LinkedHashSet<>();
     cp.add(getResourceFile(ExternalJavacProcess.class)); // self
-    // util
-    for (String path : PathManager.getUtilClassPath()) {
-      cp.add(new File(path));
-    }
+    cp.add(getResourceFile(JavacReferenceCollector.class));  // jps-javac-extension library
+    cp.add(getResourceFile(SystemInfoRt.class)); // util_rt
 
     for (Class<?> aClass : COMMON_REQUIRED_CLASSES) {
       cp.add(getResourceFile(aClass));
@@ -120,7 +172,7 @@ public class ClasspathBootstrap {
     }
 
     try {
-      final String localJavaHome = FileUtil.toSystemIndependentName(SystemProperties.getJavaHome());
+      final String localJavaHome = FileUtilRt.toSystemIndependentName(SystemProperties.getJavaHome());
       // sdkHome is not the same as the sdk used to run this process
       final File candidate = new File(sdkHome, "lib/tools.jar");
       if (candidate.exists()) {
@@ -136,15 +188,18 @@ public class ClasspathBootstrap {
         else {
           compilerClass = Class.forName("com.sun.tools.javac.api.JavacTool", false, ClasspathBootstrap.class.getClassLoader());
         }
-        String localJarPath = FileUtil.toSystemIndependentName(getResourceFile(compilerClass).getPath());
-        String relPath = FileUtil.getRelativePath(localJavaHome, localJarPath, '/');
-        if (relPath != null) {
-          if (relPath.contains("..")) {
-            relPath = FileUtil.getRelativePath(FileUtil.toSystemIndependentName(new File(localJavaHome).getParent()), localJarPath, '/');
-          }
+        final File resourceFile = getResourceFile(compilerClass);
+        if (resourceFile != null) {
+          String localJarPath = FileUtilRt.toSystemIndependentName(resourceFile.getPath());
+          String relPath = FileUtilRt.getRelativePath(localJavaHome, localJarPath, '/');
           if (relPath != null) {
-            final File targetFile = new File(sdkHome, relPath);
-            cp.add(targetFile);  // tools.jar
+            if (relPath.contains("..")) {
+              relPath = FileUtilRt.getRelativePath(FileUtilRt.toSystemIndependentName(new File(localJavaHome).getParent()), localJarPath, '/');
+            }
+            if (relPath != null) {
+              final File targetFile = new File(sdkHome, relPath);
+              cp.add(targetFile);  // tools.jar
+            }
           }
         }
       }
@@ -162,12 +217,26 @@ public class ClasspathBootstrap {
     return new ArrayList<>(cp);
   }
 
-  public static String getResourcePath(Class<?> aClass) {
+  private static @NotNull File getMavenLocalRepositoryDir() {
+    final String userHome = System.getProperty("user.home", null);
+    return userHome != null ? new File(userHome, DEFAULT_MAVEN_REPOSITORY_PATH) : new File(DEFAULT_MAVEN_REPOSITORY_PATH);
+  }
+
+  public static @Nullable String getResourcePath(Class<?> aClass) {
     return PathManager.getResourceRoot(aClass, "/" + aClass.getName().replace('.', '/') + ".class");
   }
 
+  @Nullable
   public static File getResourceFile(Class<?> aClass) {
-    return new File(getResourcePath(aClass));
+    final String resourcePath = getResourcePath(aClass);
+    return resourcePath != null? new File(resourcePath) : null;
+  }
+
+  public static void configureReflectionOpenPackages(Consumer<? super String> paramConsumer) {
+    for (String aPackage : REFLECTION_OPEN_PACKAGES) {
+      paramConsumer.accept("--add-opens");
+      paramConsumer.accept(aPackage);
+    }
   }
 
   private static List<String> getInstrumentationUtilRoots() {
@@ -183,15 +252,4 @@ public class ClasspathBootstrap {
     }
   }
 
-  private static List<String> getJavac8RefScannerClasspath() {
-    String instrumentationPath = getResourcePath(NotNullVerifyingInstrumenter.class);
-    File instrumentationUtil = new File(instrumentationPath);
-    if (instrumentationUtil.isDirectory()) {
-      //running from sources: load classes from .../out/production/intellij.java.jps.javacRefScanner8
-      return Collections.singletonList(new File(instrumentationUtil.getParentFile(), "intellij.java.jps.javacRefScanner8").getAbsolutePath());
-    }
-    else {
-      return Collections.singletonList(instrumentationPath);
-    }
-  }
 }
