@@ -1,8 +1,12 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.jetbrains.jsonSchema.impl;
 
+import com.intellij.codeInspection.util.InspectionMessage;
+import com.intellij.ide.nls.NlsMessages;
 import com.intellij.json.JsonBundle;
+import com.intellij.json.pointer.JsonPointerPosition;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.psi.PsiElement;
@@ -21,18 +25,15 @@ import org.jetbrains.annotations.Nullable;
 import java.util.*;
 import java.util.stream.Collectors;
 
-/**
- * @author Irina.Chernushina on 4/25/2017.
- */
-public class JsonSchemaAnnotatorChecker implements JsonValidationHost {
+public final class JsonSchemaAnnotatorChecker implements JsonValidationHost {
   private static final Set<JsonSchemaType> PRIMITIVE_TYPES =
-    ContainerUtil.set(JsonSchemaType._integer, JsonSchemaType._number, JsonSchemaType._boolean, JsonSchemaType._string, JsonSchemaType._null);
+    Set.of(JsonSchemaType._integer, JsonSchemaType._number, JsonSchemaType._boolean, JsonSchemaType._string, JsonSchemaType._null);
   private final Map<PsiElement, JsonValidationError> myErrors;
   @NotNull private final Project myProject;
   @NotNull private final JsonComplianceCheckerOptions myOptions;
   private boolean myHadTypeError;
 
-  protected JsonSchemaAnnotatorChecker(@NotNull Project project, @NotNull JsonComplianceCheckerOptions options) {
+  public JsonSchemaAnnotatorChecker(@NotNull Project project, @NotNull JsonComplianceCheckerOptions options) {
     myProject = project;
     myOptions = options;
     myErrors = new HashMap<>();
@@ -104,7 +105,7 @@ public class JsonSchemaAnnotatorChecker implements JsonValidationHost {
   }
 
   @Override
-  public void error(final String error, final PsiElement holder,
+  public void error(@InspectionMessage String error, final PsiElement holder,
                     JsonErrorPriority priority) {
     error(error, holder, JsonValidationError.FixableIssueKind.None, null, priority);
   }
@@ -115,7 +116,7 @@ public class JsonSchemaAnnotatorChecker implements JsonValidationHost {
   }
 
   @Override
-  public void error(final String error, final PsiElement holder,
+  public void error(@InspectionMessage String error, final PsiElement holder,
                     JsonValidationError.FixableIssueKind fixableIssueKind,
                     JsonValidationError.IssueData data,
                     JsonErrorPriority priority) {
@@ -228,7 +229,11 @@ public class JsonSchemaAnnotatorChecker implements JsonValidationHost {
 
   @Override
   public void checkObjectBySchemaRecordErrors(@NotNull JsonSchemaObject schema, @NotNull JsonValueAdapter object) {
-    final JsonSchemaAnnotatorChecker checker = checkByMatchResult(myProject, object, new JsonSchemaResolver(myProject, schema).detailedResolve(), myOptions);
+    checkObjectBySchemaRecordErrors(schema, object, new JsonPointerPosition());
+  }
+
+  public void checkObjectBySchemaRecordErrors(@NotNull JsonSchemaObject schema, @NotNull JsonValueAdapter object, @NotNull JsonPointerPosition position) {
+    final JsonSchemaAnnotatorChecker checker = checkByMatchResult(myProject, object, new JsonSchemaResolver(myProject, schema, position).detailedResolve(), myOptions);
     if (checker != null) {
       myHadTypeError = checker.isHadTypeError();
       myErrors.putAll(checker.getErrors());
@@ -306,19 +311,17 @@ public class JsonSchemaAnnotatorChecker implements JsonValidationHost {
 
   @Nullable
   public static JsonSchemaType getMatchingSchemaType(@NotNull JsonSchemaObject schema, @NotNull JsonSchemaType input) {
-    if (schema.getType() != null) {
-      final JsonSchemaType matchType = schema.getType();
-      if (matchType != null) {
-        if (JsonSchemaType._integer.equals(input) && JsonSchemaType._number.equals(matchType)) {
-          return input;
-        }
-        if (JsonSchemaType._string_number.equals(input) && (JsonSchemaType._number.equals(matchType)
-                                                            || JsonSchemaType._integer.equals(matchType)
-                                                            || JsonSchemaType._string.equals(matchType))) {
-          return input;
-        }
-        return matchType;
+    final JsonSchemaType matchType = schema.getType();
+    if (matchType != null) {
+      if (JsonSchemaType._integer.equals(input) && JsonSchemaType._number.equals(matchType)) {
+        return input;
       }
+      if (JsonSchemaType._string_number.equals(input) && (JsonSchemaType._number.equals(matchType)
+                                                          || JsonSchemaType._integer.equals(matchType)
+                                                          || JsonSchemaType._string.equals(matchType))) {
+        return input;
+      }
+      return matchType;
     }
     if (schema.getTypeVariants() != null) {
       Set<JsonSchemaType> matchTypes = schema.getTypeVariants();
@@ -416,20 +419,13 @@ public class JsonSchemaAnnotatorChecker implements JsonValidationHost {
     Collection<JsonValidationError> values = checker.getErrors().values();
     for (JsonValidationError value: values) {
       switch (value.getPriority()) {
-        case LOW_PRIORITY:
-          lowPriorityCount++;
-          break;
-        case MISSING_PROPS:
-          hasMissing = true;
-          break;
-        case MEDIUM_PRIORITY:
-          hasMedium = true;
-          break;
-        case TYPE_MISMATCH:
-          hasHard = true;
-          break;
-        case NOT_SCHEMA:
+        case LOW_PRIORITY -> lowPriorityCount++;
+        case MISSING_PROPS -> hasMissing = true;
+        case MEDIUM_PRIORITY -> hasMedium = true;
+        case TYPE_MISMATCH -> hasHard = true;
+        case NOT_SCHEMA -> {
           return AverageFailureAmount.NotSchema;
+        }
       }
     }
 
@@ -488,8 +484,8 @@ public class JsonSchemaAnnotatorChecker implements JsonValidationHost {
 
     int minErrorCount = candidateErroneousCheckers.stream().map(c -> c.getErrors().size()).min(Integer::compareTo).orElse(Integer.MAX_VALUE);
 
-    MultiMap<PsiElement, JsonValidationError> errorsWithMinAverage = MultiMap.create();
-    MultiMap<PsiElement, JsonValidationError> allErrors = MultiMap.create();
+    MultiMap<PsiElement, JsonValidationError> errorsWithMinAverage = new MultiMap<>();
+    MultiMap<PsiElement, JsonValidationError> allErrors = new MultiMap<>();
     for (int i = 0; i < candidateErroneousCheckers.size(); i++) {
       JsonSchemaAnnotatorChecker checker = candidateErroneousCheckers.get(i);
       final boolean isMoreThanMinErrors = checker.getErrors().size() > minErrorCount;
@@ -550,20 +546,19 @@ public class JsonSchemaAnnotatorChecker implements JsonValidationHost {
 
     if (commonIssueKind == JsonValidationError.FixableIssueKind.NonEnumValue) {
       String prefix = JsonBundle.message("schema.validation.enum.mismatch", "");
-      return new JsonValidationError(prefix
-                                     + errors
-                                       .stream()
-                                       // todo remove this ugly textual cutting
-                                       .map(e -> StringUtil.trimEnd(StringUtil.trimStart(e.getMessage(), prefix), prefix) /*ltr and rtl*/)
-                                       .map(e -> StringUtil.split(e, ", "))
-                                       .flatMap(e -> e.stream())
-                                       .distinct()
-                                       .collect(Collectors.joining(", ")), commonIssueKind, null, errors.iterator().next().getPriority());
+      @NlsSafe String text = errors.stream()
+        // todo remove this ugly textual cutting
+        .map(e -> StringUtil.trimEnd(StringUtil.trimStart(e.getMessage(), prefix), prefix) /*ltr and rtl*/)
+        .map(e -> StringUtil.split(e, ", "))
+        .flatMap(e -> e.stream())
+        .distinct()
+        .collect(Collectors.joining(", "));
+      return new JsonValidationError(prefix + text, commonIssueKind, null, errors.iterator().next().getPriority());
     }
 
     if (commonIssueKind == JsonValidationError.FixableIssueKind.MissingProperty) {
       String sets = errors.stream().map(e -> (JsonValidationError.MissingMultiplePropsIssueData)e.getIssueData())
-        .map(d -> d.getMessage(false)).collect(Collectors.joining(", or "));
+        .map(d -> d.getMessage(false)).collect(NlsMessages.joiningOr());
       return new JsonValidationError(JsonBundle.message(
         isOneOf ? "schema.validation.one.of.property.sets.required" : "schema.validation.at.least.one.of.property.sets.required", sets),
                                      isOneOf ? JsonValidationError.FixableIssueKind.MissingOneOfProperty : JsonValidationError.FixableIssueKind.MissingAnyOfProperty,
@@ -577,7 +572,7 @@ public class JsonSchemaAnnotatorChecker implements JsonValidationHost {
 
       if (allTypes.size() == 1) return errors.iterator().next();
 
-      List<String> actualInfos = errors.stream().map(e -> e.getMessage()).map(JsonSchemaAnnotatorChecker::fetchActual).distinct().collect(Collectors.toList());
+      List<String> actualInfos = errors.stream().map(e -> e.getMessage()).map(JsonSchemaAnnotatorChecker::fetchActual).distinct().toList();
       String actualInfo = actualInfos.size() == 1 ? (" " + JsonBundle.message("schema.validation.actual") + actualInfos.get(0) + ".") : "";
       String commonTypeMessage = JsonBundle.message("schema.validation.incompatible.types") + "\n" +
                                  JsonBundle.message("schema.validation.required.one.of",
