@@ -10,15 +10,13 @@ import com.intellij.openapi.externalSystem.task.ExternalSystemTaskManager;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.lang.reflect.InvocationTargetException;
 import java.rmi.RemoteException;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.atomic.AtomicReference;
 
-/**
- * @author Denis Zhdanov
- */
 public abstract class AbstractExternalSystemFacadeImpl<S extends ExternalSystemExecutionSettings> extends RemoteServer
   implements RemoteExternalSystemFacade<S>
 {
@@ -35,10 +33,14 @@ public abstract class AbstractExternalSystemFacadeImpl<S extends ExternalSystemE
 
   public AbstractExternalSystemFacadeImpl(@NotNull Class<ExternalSystemProjectResolver<S>> projectResolverClass,
                                           @NotNull Class<ExternalSystemTaskManager<S>> buildManagerClass)
-    throws IllegalAccessException, InstantiationException
-  {
-    myProjectResolver = new RemoteExternalSystemProjectResolverImpl<>(projectResolverClass.newInstance());
-    myTaskManager = new RemoteExternalSystemTaskManagerImpl<>(buildManagerClass.newInstance());
+    throws IllegalAccessException, InstantiationException {
+    try {
+      myProjectResolver = new RemoteExternalSystemProjectResolverImpl<>(projectResolverClass.getConstructor().newInstance());
+      myTaskManager = new RemoteExternalSystemTaskManagerImpl<>(buildManagerClass.getConstructor().newInstance());
+    }
+    catch (InvocationTargetException | NoSuchMethodException e) {
+      throw new RuntimeException(e);
+    }
   }
 
   protected void init() throws RemoteException {
@@ -87,7 +89,7 @@ public abstract class AbstractExternalSystemFacadeImpl<S extends ExternalSystemE
     }
   }
 
-  @SuppressWarnings({"unchecked", "UseOfSystemOutOrSystemErr"})
+  @SuppressWarnings("unchecked")
   private <I extends RemoteExternalSystemService<S>, C extends I> I getService(@NotNull Class<I> interfaceClass,
                                                                                final @NotNull C impl)
     throws ClassNotFoundException, IllegalAccessException, InstantiationException, RemoteException
@@ -135,16 +137,14 @@ public abstract class AbstractExternalSystemFacadeImpl<S extends ExternalSystemE
    * @throws IllegalAccessException   in case of incorrect assumptions about server class interface
    * @throws InstantiationException   in case of incorrect assumptions about server class interface
    * @throws ClassNotFoundException   in case of incorrect assumptions about server class interface
-   * @throws RemoteException
    */
-  @SuppressWarnings({"IOResourceOpenedButNotSafelyClosed", "UseOfSystemOutOrSystemErr"})
   protected abstract  <I extends RemoteExternalSystemService<S>, C extends I> I createService(@NotNull Class<I> interfaceClass,
                                                                                               final @NotNull C impl)
   throws ClassNotFoundException, IllegalAccessException, InstantiationException, RemoteException;
 
   @Override
   public boolean isTaskInProgress(@NotNull ExternalSystemTaskId id) throws RemoteException {
-    for (RemoteExternalSystemService service : myRemotes.values()) {
+    for (RemoteExternalSystemService<?> service : myRemotes.values()) {
       if (service.isTaskInProgress(id)) {
         return true;
       }
@@ -155,7 +155,7 @@ public abstract class AbstractExternalSystemFacadeImpl<S extends ExternalSystemE
   @Override
   public @NotNull Map<ExternalSystemTaskType, Set<ExternalSystemTaskId>> getTasksInProgress() throws RemoteException {
     Map<ExternalSystemTaskType, Set<ExternalSystemTaskId>> result = null;
-    for (RemoteExternalSystemService service : myRemotes.values()) {
+    for (RemoteExternalSystemService<?> service : myRemotes.values()) {
       final Map<ExternalSystemTaskType, Set<ExternalSystemTaskId>> tasks = service.getTasksInProgress();
       if (tasks.isEmpty()) {
         continue;
@@ -213,15 +213,26 @@ public abstract class AbstractExternalSystemFacadeImpl<S extends ExternalSystemE
     }
 
     @Override
-    public void onStart(@NotNull ExternalSystemTaskId id, String workingDir) {
+    public synchronized void onStart(@NotNull ExternalSystemTaskId id, String workingDir) {
     }
 
     @Override
-    public void onStart(@NotNull ExternalSystemTaskId id) {
+    public synchronized void onStart(@NotNull ExternalSystemTaskId id) {
+    }
+
+
+    @Override
+    public synchronized void onEnvironmentPrepared(@NotNull ExternalSystemTaskId id) {
+      try {
+        myManager.onEnvironmentPrepared(id);
+      }
+      catch (RemoteException e) {
+        // Ignore
+      }
     }
 
     @Override
-    public void onStatusChange(@NotNull ExternalSystemTaskNotificationEvent event) {
+    public synchronized void onStatusChange(@NotNull ExternalSystemTaskNotificationEvent event) {
       try {
         myManager.onStatusChange(event);
       }
@@ -231,7 +242,7 @@ public abstract class AbstractExternalSystemFacadeImpl<S extends ExternalSystemE
     }
 
     @Override
-    public void onTaskOutput(@NotNull ExternalSystemTaskId id, @NotNull String text, boolean stdOut) {
+    public synchronized void onTaskOutput(@NotNull ExternalSystemTaskId id, @NotNull String text, boolean stdOut) {
       try {
         myManager.onTaskOutput(id, text, stdOut);
       }
@@ -241,23 +252,23 @@ public abstract class AbstractExternalSystemFacadeImpl<S extends ExternalSystemE
     }
 
     @Override
-    public void onEnd(@NotNull ExternalSystemTaskId id) {
+    public synchronized void onEnd(@NotNull ExternalSystemTaskId id) {
     }
 
     @Override
-    public void onSuccess(@NotNull ExternalSystemTaskId id) {
+    public synchronized void onSuccess(@NotNull ExternalSystemTaskId id) {
     }
 
     @Override
-    public void onFailure(@NotNull ExternalSystemTaskId id, @NotNull Exception ex) {
+    public synchronized void onFailure(@NotNull ExternalSystemTaskId id, @NotNull Exception ex) {
     }
 
     @Override
-    public void beforeCancel(@NotNull ExternalSystemTaskId id) {
+    public synchronized void beforeCancel(@NotNull ExternalSystemTaskId id) {
     }
 
     @Override
-    public void onCancel(@NotNull ExternalSystemTaskId id) {
+    public synchronized void onCancel(@NotNull ExternalSystemTaskId id) {
     }
   }
 }
