@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 
 package com.intellij.codeInspection.ui;
 
@@ -6,11 +6,12 @@ import com.intellij.codeHighlighting.HighlightDisplayLevel;
 import com.intellij.codeInspection.reference.RefEntity;
 import com.intellij.lang.annotation.HighlightSeverity;
 import com.intellij.util.containers.BidirectionalMap;
-import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.HashingStrategy;
 import com.intellij.util.containers.Interner;
 import com.intellij.util.containers.WeakInterner;
-import gnu.trove.TObjectHashingStrategy;
-import gnu.trove.TObjectIntHashMap;
+import it.unimi.dsi.fastutil.objects.Object2IntMap;
+import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
+import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -18,10 +19,37 @@ import javax.swing.*;
 import javax.swing.tree.TreeNode;
 import java.util.*;
 
+/**
+ * Represents nodes of the {@link InspectionTree}.
+ *
+ * <ul>
+ *   <li>Nodes for sorting:</li>
+ *     <ul>
+ *       <li>{@link InspectionRootNode}</li>
+ *       <li>{@link InspectionPackageNode}</li>
+ *       <li>{@link InspectionModuleNode}</li>
+ *       <li>{@link InspectionSeverityGroupNode}</li>
+ *       <li>{@link InspectionGroupNode} for <b>Editor | Inspections</b> categories</li>
+ *     </ul>
+ *   <li>Nodes for inspection tools:</li>
+ *     <ul>
+ *       <li> {@link InspectionNode}</li>
+ *     </ul>
+ *   <li>Nodes for problems:</li>
+ *     <ul>
+ *       <li>{@link SuppressableInspectionTreeNode}</li>
+ *       <ul>
+ *         <li>{@link RefElementNode} for the element concerned by the problem</li>
+ *         <li>{@link ProblemDescriptionNode} for the description of the problem</li>
+ *         <li>{@link com.intellij.codeInspection.offlineViewer.OfflineProblemDescriptorNode}</li>
+ *       </ul>
+ *     </ul>
+ * </ul>
+ */
 public abstract class InspectionTreeNode implements TreeNode {
-  private static final Interner<LevelAndCount[]> LEVEL_AND_COUNT_INTERNER = new WeakInterner<>(new TObjectHashingStrategy<LevelAndCount[]>() {
+  private static final Interner<LevelAndCount[]> LEVEL_AND_COUNT_INTERNER = new WeakInterner<>(new HashingStrategy<>() {
     @Override
-    public int computeHashCode(LevelAndCount[] object) {
+    public int hashCode(LevelAndCount[] object) {
       return Arrays.hashCode(object);
     }
 
@@ -31,7 +59,7 @@ public abstract class InspectionTreeNode implements TreeNode {
     }
   });
 
-  protected final ProblemLevels myProblemLevels = new ProblemLevels();
+  final ProblemLevels myProblemLevels = new ProblemLevels();
   @Nullable
   volatile Children myChildren;
   final InspectionTreeNode myParent;
@@ -50,9 +78,6 @@ public abstract class InspectionTreeNode implements TreeNode {
   }
 
   LevelAndCount @NotNull [] getProblemLevels() {
-    if (!isProblemCountCacheValid()) {
-      dropProblemCountCaches();
-    }
     return myProblemLevels.getValue();
   }
 
@@ -64,16 +89,10 @@ public abstract class InspectionTreeNode implements TreeNode {
     }
   }
 
-  protected boolean isProblemCountCacheValid() {
-    return true;
-  }
-
-  protected void visitProblemSeverities(@NotNull TObjectIntHashMap<HighlightDisplayLevel> counter) {
+  protected void visitProblemSeverities(@NotNull Object2IntMap<HighlightDisplayLevel> counter) {
     for (InspectionTreeNode child : getChildren()) {
       for (LevelAndCount levelAndCount : child.getProblemLevels()) {
-        if (!counter.adjustValue(levelAndCount.getLevel(), levelAndCount.getCount())) {
-          counter.put(levelAndCount.getLevel(), levelAndCount.getCount());
-        }
+        counter.mergeInt(levelAndCount.getLevel(), levelAndCount.getCount(), Math::addExact);
       }
     }
   }
@@ -98,7 +117,7 @@ public abstract class InspectionTreeNode implements TreeNode {
   }
 
   @Nullable
-  public String getTailText() {
+  public @Nls(capitalization = Nls.Capitalization.Sentence) String getTailText() {
     return null;
   }
 
@@ -133,12 +152,12 @@ public abstract class InspectionTreeNode implements TreeNode {
     return getChildren().isEmpty();
   }
 
-  public abstract String getPresentableText();
+  public abstract @Nls String getPresentableText();
 
   @NotNull
   public List<? extends InspectionTreeNode> getChildren() {
     Children children = myChildren;
-    return children == null ? Collections.emptyList() : ContainerUtil.immutableList(children.myChildren);
+    return children == null ? Collections.emptyList() : List.of(children.myChildren);
   }
 
   @Override
@@ -167,7 +186,7 @@ public abstract class InspectionTreeNode implements TreeNode {
   }
 
   @Override
-  public Enumeration children() {
+  public Enumeration<? extends TreeNode> children() {
     return Collections.enumeration(getChildren());
   }
 
@@ -176,11 +195,7 @@ public abstract class InspectionTreeNode implements TreeNode {
     return getPresentableText();
   }
 
-  void uiRequested() {
-
-  }
-
-  static class Children {
+  static final class Children {
     private static final InspectionTreeNode[] EMPTY_ARRAY = new InspectionTreeNode[0];
 
     volatile InspectionTreeNode[] myChildren = EMPTY_ARRAY;
@@ -192,18 +207,17 @@ public abstract class InspectionTreeNode implements TreeNode {
     }
   }
 
-  class ProblemLevels {
+  final class ProblemLevels {
     private volatile LevelAndCount[] myLevels;
 
     private LevelAndCount @NotNull [] compute() {
-      TObjectIntHashMap<HighlightDisplayLevel> counter = new TObjectIntHashMap<>();
+      Object2IntMap<HighlightDisplayLevel> counter=new Object2IntOpenHashMap<>();
       visitProblemSeverities(counter);
       LevelAndCount[] arr = new LevelAndCount[counter.size()];
       final int[] i = {0};
-      counter.forEachEntry((l, c) -> {
-        arr[i[0]++] = new LevelAndCount(l, c);
-        return true;
-      });
+      for (Object2IntMap.Entry<HighlightDisplayLevel> entry : counter.object2IntEntrySet()) {
+        arr[i[0]++] = new LevelAndCount(entry.getKey(), entry.getIntValue());
+      }
       Arrays.sort(arr, Comparator.<LevelAndCount, HighlightSeverity>comparing(levelAndCount -> levelAndCount.getLevel().getSeverity())
         .reversed());
       return doesNeedInternProblemLevels() ? LEVEL_AND_COUNT_INTERNER.intern(arr) : arr;
