@@ -1,21 +1,28 @@
 
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ui.plaf.beg;
 
 import com.intellij.ide.ui.UISettings;
+import com.intellij.ide.ui.laf.intellij.IdeaPopupMenuUI;
 import com.intellij.internal.statistic.collectors.fus.actions.persistence.MainMenuCollector;
 import com.intellij.openapi.actionSystem.ActionPlaces;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.impl.ActionMenuItem;
 import com.intellij.openapi.application.ApplicationManager;
-import com.intellij.openapi.keymap.KeymapUtil;
-import com.intellij.openapi.util.SystemInfo;
+import com.intellij.openapi.keymap.MacKeymapUtil;
+import com.intellij.openapi.util.NlsContexts;
+import com.intellij.openapi.util.NlsSafe;
+import com.intellij.openapi.util.SystemInfoRt;
+import com.intellij.ui.ExperimentalUI;
+import com.intellij.ui.JBColor;
+import com.intellij.util.IconUtil;
+import com.intellij.util.ui.JBInsets;
 import com.intellij.util.ui.StartupUiUtil;
 import com.intellij.util.ui.UIUtil;
 import org.jetbrains.annotations.NonNls;
+import org.jetbrains.annotations.NotNull;
 
 import javax.swing.*;
-import javax.swing.border.Border;
 import javax.swing.event.MenuDragMouseEvent;
 import javax.swing.event.MenuDragMouseListener;
 import javax.swing.event.MouseInputListener;
@@ -28,29 +35,27 @@ import java.awt.event.ActionEvent;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseEvent;
 import java.lang.reflect.Method;
+import java.util.function.Consumer;
 
 /**
  * @author Eugene Belyaev
- * @author Vladimir Kondratyev
  */
-public class BegMenuItemUI extends BasicMenuItemUI {
+public final class BegMenuItemUI extends BasicMenuItemUI {
+  private static final String KEEP_MENU_OPEN_PROP = "BegMenuItemUI.keep-menu-open";
+
   private static final Rectangle b = new Rectangle(0, 0, 0, 0);
   private static final Rectangle j = new Rectangle();
   private static final Rectangle d = new Rectangle();
   private int myMaxGutterIconWidth;
-  private int a;
-  private static Rectangle i = new Rectangle();
+  private int myMaxGutterIconWidth2;
   private int k;
-  private int e;
   private static final Rectangle c = new Rectangle();
   private static final Rectangle h = new Rectangle();
   private static final Rectangle l = new Rectangle();
   private static final Rectangle f = new Rectangle(32767, 32767);
-  @NonNls public static final String PLAY_SOUND_METHOD = "playSound";
-  @NonNls public static final String AQUA_LOOK_AND_FEEL_CLASS_NAME = "apple.laf.AquaLookAndFeel";
-  @NonNls public static final String GET_KEY_MODIFIERS_TEXT = "getKeyModifiersText";
-
-  private Border myAquaSelectedBackgroundPainter;
+  public static final @NonNls String PLAY_SOUND_METHOD = "playSound";
+  public static final @NonNls String AQUA_LOOK_AND_FEEL_CLASS_NAME = "apple.laf.AquaLookAndFeel";
+  public static final @NonNls String GET_KEY_MODIFIERS_TEXT = "getKeyModifiersText";
 
   /** invoked by reflection */
   public static ComponentUI createUI(JComponent component) {
@@ -58,11 +63,7 @@ public class BegMenuItemUI extends BasicMenuItemUI {
   }
 
   public BegMenuItemUI() {
-    myMaxGutterIconWidth = 18;
-
-    if (UIUtil.isUnderAquaBasedLookAndFeel() && myAquaSelectedBackgroundPainter == null) {
-      myAquaSelectedBackgroundPainter = (Border) UIManager.get("MenuItem.selectedBackgroundPainter");
-    }
+    myMaxGutterIconWidth2 = myMaxGutterIconWidth = 18;
   }
 
   @Override
@@ -71,60 +72,66 @@ public class BegMenuItemUI extends BasicMenuItemUI {
     final String propertyPrefix = getPropertyPrefix();
     Integer integer = UIUtil.getPropertyMaxGutterIconWidth(propertyPrefix);
     if (integer != null){
-      myMaxGutterIconWidth = integer.intValue();
+      myMaxGutterIconWidth2 = myMaxGutterIconWidth = integer.intValue();
     }
 
-    selectionBackground = UIUtil.getListSelectionBackground(true);
+    selectionBackground = JBColor.namedColor("Menu.selectionBackground", UIUtil.getListSelectionBackground(true));
   }
 
-  private static boolean isSelected(JMenuItem item) {
+  static boolean isSelected(JMenuItem item) {
     if (item == null) return false;
     ButtonModel model = item.getModel();
     if (model == null) return false;
     return model.isArmed() || (item instanceof JMenu) && model.isSelected();
   }
 
+  private void checkArrowIcon() {
+    if (arrowIcon != null && IdeaPopupMenuUI.isPartOfPopupMenu(menuItem)) {
+      arrowIcon = null;
+    }
+  }
+
+  private void checkEmptyIcon(JComponent comp) {
+    myMaxGutterIconWidth = getAllowedIcon() == null && IdeaPopupMenuUI.hideEmptyIcon(comp) ? 0 : myMaxGutterIconWidth2;
+  }
+
   @Override
   public void paint(Graphics g, JComponent comp) {
+    checkArrowIcon();
     UISettings.setupAntialiasing(g);
     JMenuItem jmenuitem = (JMenuItem)comp;
     ButtonModel buttonmodel = jmenuitem.getModel();
     int mnemonicIndex = jmenuitem.getDisplayedMnemonicIndex();
     Icon icon1 = getIcon();
     Icon icon2 = getAllowedIcon();
+    checkEmptyIcon(comp);
     int j1 = jmenuitem.getWidth();
     int k1 = jmenuitem.getHeight();
     Insets insets = comp.getInsets();
     initBounds();
     f.setBounds(0, 0, j1, k1);
-    f.x += insets.left;
-    f.y += insets.top;
-    f.width -= insets.right + f.x;
-    f.height -= insets.bottom + f.y;
+    JBInsets.removeFrom(f, insets);
     Font font = g.getFont();
     Font font1 = comp.getFont();
     g.setFont(font1);
     FontMetrics fontmetrics = g.getFontMetrics(font1);
     FontMetrics fontmetrics1 = g.getFontMetrics(acceleratorFont);
-    String keyStrokeText;
-    if (jmenuitem instanceof ActionMenuItem) {
-      keyStrokeText = ((ActionMenuItem)jmenuitem).getFirstShortcutText();
-    }else{
-      keyStrokeText = getKeyStrokeText(jmenuitem.getAccelerator());
-    }
+    String keyStrokeText = getKeyStrokeText(jmenuitem);
     String s1 = layoutMenuItem(fontmetrics, jmenuitem.getText(), fontmetrics1, keyStrokeText, icon1, icon2, arrowIcon, jmenuitem.getVerticalAlignment(), jmenuitem.getHorizontalAlignment(), jmenuitem.getVerticalTextPosition(), jmenuitem.getHorizontalTextPosition(), f, l, j, c, h, d, jmenuitem.getText() != null ? defaultTextIconGap : 0, defaultTextIconGap);
     Color color2 = g.getColor();
-    if (comp.isOpaque() || (StartupUiUtil.isUnderDarcula() || UIUtil.isUnderIntelliJLaF())){
+    if (comp.isOpaque() || StartupUiUtil.isUnderDarcula() || UIUtil.isUnderIntelliJLaF()) {
       g.setColor(jmenuitem.getBackground());
       g.fillRect(0, 0, j1, k1);
       if (isSelected(jmenuitem)) {
         g.setColor(selectionBackground);
-        if (icon2 != null && !(StartupUiUtil.isUnderDarcula() || UIUtil.isUnderIntelliJLaF())){
+        if (icon2 != null && !(StartupUiUtil.isUnderDarcula() || UIUtil.isUnderIntelliJLaF())) {
           g.fillRect(k, 0, j1 - k, k1);
         }
-        else{
+        else if (ExperimentalUI.isNewUI() || IdeaPopupMenuUI.isRoundBorder()) {
+          IdeaMenuUI.paintRoundSelection(g, comp, j1, k1);
+        }
+        else {
           g.fillRect(0, 0, j1, k1);
-          g.setColor(selectionBackground);
         }
       }
       g.setColor(color2);
@@ -133,34 +140,34 @@ public class BegMenuItemUI extends BasicMenuItemUI {
       if (isSelected(jmenuitem)) {
         g.setColor(selectionForeground);
       }
-      else{
+      else {
         g.setColor(jmenuitem.getForeground());
       }
-      if (useCheckAndArrow()){
-        icon2.paintIcon(comp, g, h.x, h.y);
+      if (useCheckAndArrow()) {
+        IconUtil.paintSelectionAwareIcon(icon2, jmenuitem, g, h.x, h.y, isSelected(jmenuitem));
       }
       g.setColor(color2);
-      if (menuItem.isArmed()){
+      if (menuItem.isArmed()) {
         drawIconBorder(g);
       }
     }
-    if (icon1 != null){
+    if (icon1 != null) {
       if (!buttonmodel.isEnabled()){
         icon1 = jmenuitem.getDisabledIcon();
       }
       else
-        if (buttonmodel.isPressed() && buttonmodel.isArmed()){
+        if (buttonmodel.isPressed() && buttonmodel.isArmed()) {
           icon1 = jmenuitem.getPressedIcon();
           if (icon1 == null){
             icon1 = jmenuitem.getIcon();
           }
         }
-      if (icon1 != null){
-        icon1.paintIcon(comp, g, l.x, l.y);
+      if (icon1 != null) {
+        IconUtil.paintSelectionAwareIcon(icon1, jmenuitem, g, l.x, l.y, isSelected(jmenuitem));
       }
     }
-    if (s1 != null && s1.length() > 0){
-      if (buttonmodel.isEnabled()){
+    if (s1 != null && s1.length() > 0) {
+      if (buttonmodel.isEnabled()) {
         if (isSelected(jmenuitem)) {
           g.setColor(selectionForeground);
         }
@@ -183,7 +190,7 @@ public class BegMenuItemUI extends BasicMenuItemUI {
         }
       }
     }
-    if (keyStrokeText != null && !keyStrokeText.isEmpty()){
+    if (keyStrokeText != null && !keyStrokeText.isEmpty()) {
       g.setFont(acceleratorFont);
       if (buttonmodel.isEnabled()){
         if (UIUtil.isUnderAquaBasedLookAndFeel() && isSelected(jmenuitem)) {
@@ -197,50 +204,51 @@ public class BegMenuItemUI extends BasicMenuItemUI {
             g.setColor(acceleratorForeground);
           }
         }
-        BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics.getAscent());
+        BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics1.getAscent());
       }
       else
-        if (disabledForeground != null){
+        if (disabledForeground != null) {
           g.setColor(disabledForeground);
-          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics.getAscent());
+          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics1.getAscent());
         }
-        else{
+        else {
           g.setColor(jmenuitem.getBackground().brighter());
-          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics.getAscent());
+          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics1.getAscent());
           g.setColor(jmenuitem.getBackground().darker());
-          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x - 1, (c.y + fontmetrics.getAscent()) - 1);
+          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x - 1, (c.y + fontmetrics1.getAscent()) - 1);
         }
     }
-    if (arrowIcon != null){
+    if (arrowIcon != null) {
       if (isSelected(jmenuitem)) {
         g.setColor(selectionForeground);
       }
       if (useCheckAndArrow()){
-        arrowIcon.paintIcon(comp, g, d.x, d.y);
+        IconUtil.paintSelectionAwareIcon(arrowIcon, comp, g, d.x, d.y, isSelected(jmenuitem));
       }
     }
     g.setColor(color2);
     g.setFont(font);
   }
 
-  private static String getKeyStrokeText(KeyStroke keystroke) {
+  private static @NlsSafe String getKeyStrokeText(@NotNull JMenuItem item) {
+    return item instanceof ActionMenuItem
+           ? ((ActionMenuItem)item).getFirstShortcutText()
+           : getKeyStrokeText(item.getAccelerator());
+  }
+
+  private static @NlsSafe String getKeyStrokeText(KeyStroke keystroke) {
     String s1 = "";
     if (keystroke != null){
       int j1 = keystroke.getModifiers();
       if (j1 > 0){
-        if (SystemInfo.isMac) {
+        if (SystemInfoRt.isMac) {
           try {
             Class<?> appleLaf = Class.forName(AQUA_LOOK_AND_FEEL_CLASS_NAME);
             Method getModifiers = appleLaf.getMethod(GET_KEY_MODIFIERS_TEXT, int.class, boolean.class);
-            s1 = (String)getModifiers.invoke(appleLaf, new Object[] {new Integer(j1), Boolean.FALSE});
+            s1 = (String)getModifiers.invoke(appleLaf, new Object[] {Integer.valueOf(j1), Boolean.FALSE});
           }
           catch (Exception e) {
-            if (SystemInfo.isMacOSLeopard) {
-              s1 = KeymapUtil.getKeyModifiersTextForMacOSLeopard(j1);
-            }
-            else {
-              s1 = KeyEvent.getKeyModifiersText(j1) + '+';
-            }
+            s1 = MacKeymapUtil.getKeyModifiersTextForMacOSLeopard(j1);
           }
         }
         else {
@@ -296,9 +304,9 @@ public class BegMenuItemUI extends BasicMenuItemUI {
 
   private String layoutMenuItem(
     FontMetrics fontmetrics,
-    String text,
+    @NlsContexts.Command String text,
     FontMetrics fontmetrics1,
-    String keyStrokeText,
+    @NlsContexts.Label String keyStrokeText,
     Icon icon,
     Icon checkIcon,
     Icon arrowIcon,
@@ -351,19 +359,17 @@ public class BegMenuItemUI extends BasicMenuItemUI {
 
     // Position the Accelerator text rect
 
-    acceleratorRect.x += viewRect.width - arrowIconRect.width - menuItemGap - acceleratorRect.width;
+    acceleratorRect.x = viewRect.x + viewRect.width - arrowIconRect.width - (arrowIconRect.width > 0 ? menuItemGap : 0) - acceleratorRect.width;
     acceleratorRect.y = (viewRect.y + viewRect.height / 2) - acceleratorRect.height / 2;
 
     // Position the Check and Arrow Icons
 
     if (useCheckAndArrow()){
-      arrowIconRect.x += viewRect.width - arrowIconRect.width;
-      arrowIconRect.y = (viewRect.y + labelRect.height / 2) - arrowIconRect.height / 2;
+      arrowIconRect.x = viewRect.x + viewRect.width - arrowIconRect.width;
+      arrowIconRect.y = (labelRect.y + labelRect.height / 2) - arrowIconRect.height / 2;
       if (checkIcon != null){
-        checkIconRect.y = (viewRect.y + labelRect.height / 2) - checkIconRect.height / 2;
+        checkIconRect.y = (labelRect.y + labelRect.height / 2) - checkIconRect.height / 2;
         checkIconRect.x += (viewRect.x + myMaxGutterIconWidth / 2) - checkIcon.getIconWidth() / 2;
-        a = viewRect.x;
-        e = (viewRect.y + labelRect.height / 2) - myMaxGutterIconWidth / 2;
         k = viewRect.x + myMaxGutterIconWidth + 2;
       }
       else{
@@ -383,23 +389,21 @@ public class BegMenuItemUI extends BasicMenuItemUI {
 
   @Override
   public Dimension getPreferredSize(JComponent comp) {
+    checkArrowIcon();
     JMenuItem jmenuitem = (JMenuItem)comp;
     Icon icon1 = getIcon();
     Icon icon2 = getAllowedIcon();
+    checkEmptyIcon(comp);
     String text = jmenuitem.getText();
-    String keyStrokeText;
-    if (jmenuitem instanceof ActionMenuItem) {
-      keyStrokeText = ((ActionMenuItem)jmenuitem).getFirstShortcutText();
-    }else{
-      keyStrokeText = getKeyStrokeText(jmenuitem.getAccelerator());
-    }
+    String keyStrokeText = getKeyStrokeText(jmenuitem);
     Font font = jmenuitem.getFont();
     FontMetrics fontmetrics = comp.getFontMetrics(font);
     FontMetrics fontmetrics1 = comp.getFontMetrics(acceleratorFont);
     initBounds();
     layoutMenuItem(fontmetrics, text, fontmetrics1, keyStrokeText, icon1, icon2, arrowIcon, jmenuitem.getVerticalAlignment(), jmenuitem.getHorizontalAlignment(), jmenuitem.getVerticalTextPosition(), jmenuitem.getHorizontalTextPosition(), f, l, j, c, h, d, text != null ? defaultTextIconGap : 0, defaultTextIconGap);
+    Rectangle i = new Rectangle();
     i.setBounds(j);
-    i = SwingUtilities.computeUnion(l.x, l.y, l.width, l.height, i);
+    SwingUtilities.computeUnion(l.x, l.y, l.width, l.height, i);
     if (!(keyStrokeText == null || keyStrokeText.isEmpty())){
       i.width += c.width;
       i.width += 7 * defaultTextIconGap;
@@ -422,7 +426,8 @@ public class BegMenuItemUI extends BasicMenuItemUI {
     if (i.height % 2 == 0){
       i.height++;
     }
-    return i.getSize();
+
+    return IdeaMenuUI.patchPreferredSize(comp, i.getSize());
   }
 
   private void drawIconBorder(Graphics g) {
@@ -440,14 +445,13 @@ public class BegMenuItemUI extends BasicMenuItemUI {
 */
   }
 
-  private void initBounds() {
+  private static void initBounds() {
     l.setBounds(b);
     j.setBounds(b);
     c.setBounds(b);
     h.setBounds(b);
     d.setBounds(b);
     f.setBounds(0, 0, 32767, 32767);
-    i.setBounds(b);
   }
 
   private Icon getAllowedIcon() {
@@ -469,7 +473,6 @@ public class BegMenuItemUI extends BasicMenuItemUI {
   }
 
   /** Copied from BasicMenuItemUI */
-  @SuppressWarnings({"HardCodedStringLiteral"})
   private boolean isInternalFrameSystemMenu(){
     String actionCommand=menuItem.getActionCommand();
     if(
@@ -485,44 +488,59 @@ public class BegMenuItemUI extends BasicMenuItemUI {
   }
 
   /** Copied from BasicMenuItemUI */
-  private void doClick(MenuSelectionManager msm,MouseEvent e) {
+  private void doClick(MenuSelectionManager msm, MouseEvent e) {
     // Auditory cue
-    if(!isInternalFrameSystemMenu()){
-      @NonNls ActionMap map=menuItem.getActionMap();
-      if(map!=null){
-        Action audioAction=map.get(getPropertyPrefix()+".commandSound");
-        if(audioAction!=null){
+    if (!isInternalFrameSystemMenu()) {
+      @NonNls ActionMap map = menuItem.getActionMap();
+      if (map != null) {
+        Action audioAction = map.get(getPropertyPrefix() + ".commandSound");
+        if (audioAction != null) {
           // pass off firing the Action to a utility method
-          BasicLookAndFeel lf=(BasicLookAndFeel)UIManager.getLookAndFeel();
+          BasicLookAndFeel lf = (BasicLookAndFeel)UIManager.getLookAndFeel();
           // It's a hack. The method BasicLookAndFeel.playSound has protected access, so
-          // it's imposible to mormally invoke it.
+          // it's impossible to normally invoke it.
           try {
-            Method playSoundMethod=BasicLookAndFeel.class.getDeclaredMethod(PLAY_SOUND_METHOD, Action.class);
+            Method playSoundMethod = BasicLookAndFeel.class.getDeclaredMethod(PLAY_SOUND_METHOD, Action.class);
             playSoundMethod.setAccessible(true);
             playSoundMethod.invoke(lf, audioAction);
-          } catch(Exception ignored) {}
+          }
+          catch (Exception ignored) {
+          }
         }
       }
     }
     // Visual feedback
-    if(msm==null){
-      msm=MenuSelectionManager.defaultManager();
+    if (msm == null) {
+      msm = MenuSelectionManager.defaultManager();
     }
     ActionMenuItem item = (ActionMenuItem)menuItem;
     AnAction action = item.getAnAction();
-    if (action != null && ActionPlaces.MAIN_MENU.equals(item.getPlace()) && ApplicationManager.getApplication() != null) {
+    if (ActionPlaces.MAIN_MENU.equals(item.place) && ApplicationManager.getApplication() != null) {
       MainMenuCollector.getInstance().record(action);
     }
-    msm.clearSelectedPath();
-    item.fireActionPerformed(
-      new ActionEvent(
-        menuItem,
-        ActionEvent.ACTION_PERFORMED,
-        null,
-        e.getWhen(),
-        e.getModifiers()
-      )
-    );
+    if (!item.isKeepMenuOpen()) {
+      msm.clearSelectedPath();
+    }
+    ActionEvent event = new ActionEvent(menuItem, ActionEvent.ACTION_PERFORMED, null, e.getWhen(), e.getModifiers());
+    item.fireActionPerformed(event);
+    if (item.isKeepMenuOpen()) {
+      Container parent = item.getParent();
+      if (parent instanceof JComponent) {
+        //Fake event to trigger update in ActionPopupMenuImpl.MyMenu
+        ((JComponent)parent).putClientProperty(KEEP_MENU_OPEN_PROP, System.currentTimeMillis());
+      }
+    }
+  }
+
+  /**
+   * To update items in case of multiple choice when there are dependencies between items like:
+   * <ol>
+   *   <li>Selected A means unselected B and vise versa</li>
+   *   <li>Selected/unselected A means enabled/disabled B</li>
+   * </ol>
+   */
+  public static void registerMultiChoiceSupport(@NotNull JPopupMenu component, @NotNull Consumer<? super JPopupMenu> onUpdate) {
+    component.addPropertyChangeListener(KEEP_MENU_OPEN_PROP, evt -> onUpdate.accept((JPopupMenu)evt.getSource()));
   }
 
   @Override
@@ -530,14 +548,17 @@ public class BegMenuItemUI extends BasicMenuItemUI {
     return new MyMouseInputHandler();
   }
 
-  private class MyMouseInputHandler extends MouseInputHandler{
+  private final class MyMouseInputHandler extends MouseInputHandler {
     @Override
     public void mouseReleased(MouseEvent e){
       MenuSelectionManager manager=MenuSelectionManager.defaultManager();
-      Point p=e.getPoint();
-      if(p.x>=0&&p.x<menuItem.getWidth()&&p.y>=0&&p.y<menuItem.getHeight()){
-        doClick(manager,e);
-      } else{
+      Point p = e.getPoint();
+      if (p.x >= 0 && p.x < menuItem.getWidth() && p.y >= 0 && p.y < menuItem.getHeight()) {
+        if (e.getButton() == MouseEvent.BUTTON1) {
+          doClick(manager, e);
+        }
+      }
+      else {
         manager.processMouseEvent(e);
       }
     }
