@@ -1,34 +1,42 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vfs;
 
-import com.intellij.ide.impl.ProjectUtil;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.WriteAction;
+import com.intellij.openapi.application.ex.ApplicationManagerEx;
 import com.intellij.openapi.application.ex.PathManagerEx;
-import com.intellij.openapi.command.WriteCommandAction;
+import com.intellij.openapi.module.Module;
+import com.intellij.openapi.module.ModuleType;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.progress.Task;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.project.ProjectManager;
-import com.intellij.openapi.project.ex.ProjectManagerEx;
 import com.intellij.openapi.project.impl.ProjectManagerImpl;
-import com.intellij.openapi.util.Disposer;
+import com.intellij.openapi.roots.ModuleRootModificationUtil;
+import com.intellij.openapi.roots.ProjectFileIndex;
 import com.intellij.openapi.util.SystemInfo;
+import com.intellij.openapi.util.io.FileAttributes;
+import com.intellij.openapi.util.io.FileSystemUtil;
+import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.IoTestUtil;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.vfs.encoding.EncodingProjectManager;
+import com.intellij.openapi.vfs.encoding.EncodingProjectManagerImpl;
 import com.intellij.openapi.vfs.newvfs.ManagingFS;
 import com.intellij.openapi.vfs.newvfs.NewVirtualFile;
 import com.intellij.openapi.vfs.newvfs.RefreshQueue;
 import com.intellij.openapi.vfs.newvfs.RefreshSession;
+import com.intellij.openapi.vfs.newvfs.events.VFileCreateEvent;
 import com.intellij.openapi.vfs.newvfs.impl.VirtualDirectoryImpl;
 import com.intellij.testFramework.EdtTestUtil;
-import com.intellij.testFramework.HeavyPlatformTestCase;
-import com.intellij.testFramework.ServiceContainerUtil;
+import com.intellij.testFramework.PlatformTestUtil;
+import com.intellij.testFramework.PsiTestUtil;
 import com.intellij.testFramework.fixtures.BareTestFixtureTestCase;
 import com.intellij.testFramework.rules.TempDirectory;
 import com.intellij.util.TimeoutUtil;
 import com.intellij.util.concurrency.Semaphore;
+import com.intellij.util.io.SuperUserStatus;
 import com.intellij.util.ui.UIUtil;
 import org.jetbrains.annotations.NotNull;
 import org.junit.Rule;
@@ -39,6 +47,7 @@ import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -51,9 +60,10 @@ import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.*;
+import static org.junit.Assume.assumeTrue;
 
 public class VfsUtilTest extends BareTestFixtureTestCase {
-  @Rule public TempDirectory myTempDir = new TempDirectory();
+  @Rule public TempDirectory tempDir = new TempDirectory();
 
   @Test
   public void testFixIdeaUrl() {
@@ -101,7 +111,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testFindChildWithTrailingSpace() {
-    File tempDir = myTempDir.newDirectory();
+    File tempDir = this.tempDir.newDirectory();
     VirtualFile vDir = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempDir);
     assertNotNull(vDir);
     assertTrue(vDir.isDirectory());
@@ -114,7 +124,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testDirAttributeRefreshes() throws IOException {
-    File file = myTempDir.newFile("test");
+    File file = tempDir.newFile("test");
     VirtualFile vFile = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(file);
     assertNotNull(vFile);
     assertFalse(vFile.isDirectory());
@@ -134,7 +144,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testPresentableUrlSurvivesDeletion() throws IOException {
-    VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(myTempDir.newFile("file.txt"));
+    VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempDir.newFile("file.txt"));
     assertNotNull(file);
     String url = file.getPresentableUrl();
     assertNotNull(url);
@@ -208,15 +218,17 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testFindRootWithDenormalizedPath() {
-    File tempJar = IoTestUtil.createTestJar(myTempDir.newFile("test.jar"));
+    File tempJar = IoTestUtil.createTestJar(tempDir.newFile("test.jar"));
     VirtualFile jar = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempJar);
     assertNotNull(jar);
 
-    JarFileSystem fs = JarFileSystem.getInstance();
-    NewVirtualFile root1 = ManagingFS.getInstance().findRoot(jar.getPath() + "!/", fs);
-    NewVirtualFile root2 = ManagingFS.getInstance().findRoot(jar.getParent().getPath() + "//" + jar.getName() + "!/", fs);
+    NewVirtualFile root1 = ManagingFS.getInstance().findRoot(jar.getPath() + "!/", JarFileSystem.getInstance());
+    NewVirtualFile root2 = ManagingFS.getInstance().findRoot(jar.getParent().getPath() + "//" + jar.getName() + "!/", JarFileSystem.getInstance());
     assertNotNull(root1);
     assertSame(root1, root2);
+
+    assertNull(LocalFileSystem.getInstance().findFileByPath("//../blah-blah")); // it must not crash in FsRoot("//..")
+    assertNull(LocalFileSystem.getInstance().findFileByPath("//./blah-blah")); // it must not crash in FsRoot("//.")
   }
 
   @Test
@@ -232,7 +244,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testNotCanonicallyNamedChild() throws IOException {
-    File tempDir = myTempDir.newDirectory();
+    File tempDir = this.tempDir.newDirectory();
     assertTrue(new File(tempDir, "libFiles").createNewFile());
     assertTrue(new File(tempDir, "CssInvalidElement").createNewFile());
     assertTrue(new File(tempDir, "extFiles").createNewFile());
@@ -258,125 +270,116 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
     assertNull(vDir.findChild("xxx//extFiles"));
   }
 
-  @Test
+  @Test(timeout = 30_000)
   public void testRenameDuringFullRefresh() throws IOException { doRenameAndRefreshTest(true); }
 
-  @Test
+  @Test(timeout = 120_000)
   public void testRenameDuringPartialRefresh() throws IOException { doRenameAndRefreshTest(false); }
 
   private void doRenameAndRefreshTest(boolean full) throws IOException {
-    assertFalse(ApplicationManager.getApplication().isDispatchThread());
+    ApplicationManager.getApplication().assertIsNonDispatchThread();
 
-    File tempDir = myTempDir.newDirectory();
-    assertTrue(new File(tempDir, "child").createNewFile());
-
-    VirtualFile parent = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempDir);
+    File testFile = tempDir.newFile("test/child.txt");
+    VirtualFile parent = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(testFile.getParentFile());
     assertNotNull(parent);
     if (full) {
       assertEquals(1, parent.getChildren().length);
     }
-    VirtualFile child = parent.findChild("child");
+    VirtualFile child = parent.findChild(testFile.getName());
     assertNotNull(child);
 
-    List<VirtualFile> files = Collections.singletonList(parent);
+    ApplicationManagerEx.setInStressTest(true);
+    try {
+      List<VirtualFile> files = List.of(parent);
+      Semaphore semaphore = new Semaphore();
+      for (int i = 0; i < 1000; i++) {
+        semaphore.down();
+        VfsUtil.markDirty(true, false, parent);
+        LocalFileSystem.getInstance().refreshFiles(files, true, true, semaphore::up);
 
-    Semaphore semaphore = new Semaphore();
-    for (int i = 0; i < 1000; i++) {
-      semaphore.down();
-      VfsUtil.markDirty(true, false, parent);
-      LocalFileSystem.getInstance().refreshFiles(files, true, true, semaphore::up);
+        assertTrue(child.isValid());
+        String newName = "name" + i + ".txt";
+        WriteAction.runAndWait(() -> child.rename(this, newName));
+        assertTrue(child.isValid());
 
-      assertTrue(child.isValid());
-      String newName = "name" + i;
-      WriteAction.runAndWait(() -> child.rename(this, newName));
-      assertTrue(child.isValid());
+        TimeoutUtil.sleep(1);  // needed to prevent frequent event detector from triggering
+      }
 
-      TimeoutUtil.sleep(1);  // needed to prevent frequent event detector from triggering
+      semaphore.waitFor();
     }
-
-    assertTrue(semaphore.waitFor(60000));
+    finally {
+      ApplicationManagerEx.setInStressTest(false);
+    }
   }
 
   @Test(timeout = 20_000)
   public void testScanNewChildrenMustNotBeRunOutsideOfProjectRoots() throws Exception {
-    checkNewDirAndRefresh(__-> {}, getAllExcludedCalled->assertFalse(getAllExcludedCalled.get()));
+    checkNewDirAndRefresh(__-> {}, getAllExcludedCalled -> assertFalse(getAllExcludedCalled.get()));
   }
 
   @Test(timeout = 20_000)
-  public void testRefreshAndEspeciallyScanChildrenMustBeRunOutsideOfReadActionToAvoidUILags() throws Exception {
+  public void testRefreshAndEspeciallyScanChildrenMustBeRunOutsideReadActionToAvoidUILags() throws Exception {
     AtomicReference<Project> project = new AtomicReference<>();
-    checkNewDirAndRefresh(temp ->
-        WriteCommandAction.runWriteCommandAction(null, ()->{
-          project.set(HeavyPlatformTestCase.createProject(temp));
-          assertTrue(ProjectManagerEx.getInstanceEx().openProject(project.get()));
+    checkNewDirAndRefresh(
+      temp -> {
+        Project p = PlatformTestUtil.loadAndOpenProject(temp, getTestRootDisposable());
+        project.set(p);
+        assertTrue(p.isOpen());
+      },
+      getAllExcludedCalled -> {
+        try {
+          assertTrue(getAllExcludedCalled.get());
+        }
+        finally {
+          // this concoction is to ensure close() is called on the mock ProjectManagerImpl
           assertTrue(project.get().isOpen());
-        }),
-    getAllExcludedCalled -> {
-      try {
-        assertTrue(getAllExcludedCalled.get());
+        }
       }
-      finally {
-        // this concoction is to ensure close() is called on the mock ProjectManagerImpl
-        assertTrue(project.get().isOpen());
-        ApplicationManager.getApplication().invokeAndWait(() -> ProjectUtil.closeAndDispose(project.get()));
-      }
-    });
+    );
   }
 
   private void checkNewDirAndRefresh(Consumer<? super Path> dirCreatedCallback, Consumer<? super AtomicBoolean> getAllExcludedCalledChecker) throws IOException {
     AtomicBoolean getAllExcludedCalled = new AtomicBoolean();
-    ProjectManagerImpl test = new ProjectManagerImpl() {
-      @Override
-      public String @NotNull [] getAllExcludedUrls() {
-        getAllExcludedCalled.set(true);
-        assertFalse(ApplicationManager.getApplication().isReadAccessAllowed());
-        return super.getAllExcludedUrls();
-      }
-    };
+    ((ProjectManagerImpl)ProjectManager.getInstance()).testOnlyGetExcludedUrlsCallback(getTestRootDisposable(), () -> {
+      getAllExcludedCalled.set(true);
+      assertFalse(ApplicationManager.getApplication().isReadAccessAllowed());
+    });
 
-    ServiceContainerUtil.replaceService(ApplicationManager.getApplication(), ProjectManager.class, test, test);
-    assertSame(test, ProjectManager.getInstance());
+    final File temp = tempDir.newDirectory();
+    VirtualDirectoryImpl vTemp = (VirtualDirectoryImpl)LocalFileSystem.getInstance().refreshAndFindFileByIoFile(temp);
+    assertNotNull(vTemp);
+    vTemp.getChildren(); //to force full dir refresh?!
+    dirCreatedCallback.accept(temp.toPath());
+    File d = new File(temp, "d");
+    assertTrue(d.mkdir());
+    File d1 = new File(d, "d1");
+    assertTrue(d1.mkdir());
+    File x = new File(d1, "x.txt");
+    assertTrue(x.createNewFile());
 
-    try {
-      final File temp = myTempDir.newDirectory();
-      VirtualDirectoryImpl vTemp = (VirtualDirectoryImpl)LocalFileSystem.getInstance().refreshAndFindFileByIoFile(temp);
-      assertNotNull(vTemp);
-      vTemp.getChildren(); //to force full dir refresh?!
-      dirCreatedCallback.accept(temp.toPath());
-      File d = new File(temp, "d");
-      assertTrue(d.mkdir());
-      File d1 = new File(d, "d1");
-      assertTrue(d1.mkdir());
-      File x = new File(d1, "x.txt");
-      assertTrue(x.createNewFile());
+    ApplicationManager.getApplication().assertIsNonDispatchThread();
+    VfsUtil.markDirty(true, false, vTemp);
+    CountDownLatch refreshed = new CountDownLatch(1);
+    LocalFileSystem.getInstance().refreshFiles(Collections.singletonList(vTemp), false, true, refreshed::countDown);
 
-      assertFalse(ApplicationManager.getApplication().isDispatchThread());
-      VfsUtil.markDirty(true, false, vTemp);
-      CountDownLatch refreshed = new CountDownLatch(1);
-      LocalFileSystem.getInstance().refreshFiles(Collections.singletonList(vTemp), false, true, refreshed::countDown);
-
-      while (refreshed.getCount() != 0) {
-        UIUtil.pump();
-      }
-      getAllExcludedCalledChecker.accept(getAllExcludedCalled);
+    while (refreshed.getCount() != 0) {
+      UIUtil.pump();
     }
-    finally {
-      WriteAction.runAndWait(() -> Disposer.dispose(test));
-    }
+    getAllExcludedCalledChecker.accept(getAllExcludedCalled);
   }
 
   @Test
   public void asyncRefreshInModalProgressCompletesWithinIt() {
     EdtTestUtil.runInEdtAndWait(() -> {
-      VirtualDirectoryImpl vTemp = (VirtualDirectoryImpl)LocalFileSystem.getInstance().refreshAndFindFileByIoFile(myTempDir.getRoot());
+      VirtualDirectoryImpl vTemp = (VirtualDirectoryImpl)LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempDir.getRoot());
       assertThat(vTemp.getChildren()).isEmpty();
 
-      myTempDir.newFile("x.txt");
+      tempDir.newFile("x.txt");
 
       ProgressManager.getInstance().run(new Task.Modal(null, "", false) {
         @Override
         public void run(@NotNull ProgressIndicator indicator) {
-          assertFalse(ApplicationManager.getApplication().isDispatchThread());
+          ApplicationManager.getApplication().assertIsNonDispatchThread();
 
           Semaphore semaphore = new Semaphore(1);
           vTemp.refresh(true, true, semaphore::up);
@@ -388,20 +391,20 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
   }
 
   @Test(timeout = 20_000)
-  public void olderRefreshWithLessSpecificModalityDoesNotBlockNewerRefresh_NoWaiting() {
+  public void olderRefreshWithLessSpecificModalityDoesNotBlockNewerRefresh_NoWaiting() throws IOException {
     checkNonModalThenModalRefresh(false);
   }
 
   @Test(timeout = 20_000)
-  public void olderRefreshWithLessSpecificModalityDoesNotBlockNewerRefresh_WithWaiting() {
+  public void olderRefreshWithLessSpecificModalityDoesNotBlockNewerRefresh_WithWaiting() throws IOException {
     checkNonModalThenModalRefresh(true);
   }
 
-  private void checkNonModalThenModalRefresh(boolean waitForDiskRefreshCompletionBeforeStartingModality) {
+  private void checkNonModalThenModalRefresh(boolean waitForDiskRefreshCompletionBeforeStartingModality) throws IOException {
     EdtTestUtil.runInEdtAndWait(() -> {
-      File dir1 = myTempDir.newDirectory("dir1");
-      File dir2 = myTempDir.newDirectory("dir2");
-      VirtualFile vDir = VfsUtil.findFileByIoFile(myTempDir.getRoot(), true);
+      File dir1 = tempDir.newDirectory("dir1");
+      File dir2 = tempDir.newDirectory("dir2");
+      VirtualFile vDir = VfsUtil.findFileByIoFile(tempDir.getRoot(), true);
       assertThat(Stream.of(vDir.getChildren()).map(VirtualFile::getName)).containsExactly(dir1.getName(), dir2.getName());
       VirtualFile vDir1 = vDir.getChildren()[0];
       VirtualFile vDir2 = vDir.getChildren()[1];
@@ -429,7 +432,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
       ProgressManager.getInstance().run(new Task.Modal(null, "", false) {
         @Override
         public void run(@NotNull ProgressIndicator indicator) {
-          assertFalse(ApplicationManager.getApplication().isDispatchThread());
+          ApplicationManager.getApplication().assertIsNonDispatchThread();
 
           Semaphore local = new Semaphore(1);
           vDir2.refresh(true, true, () -> {
@@ -452,9 +455,125 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
       //todo order should be the same
       if (waitForDiskRefreshCompletionBeforeStartingModality) {
         assertThat(log).containsExactlyInAnyOrder("modal finished", "non-modal finished");
-      } else {
+      }
+      else {
         assertThat(log).containsExactly("modal finished", "non-modal finished");
       }
     });
+  }
+
+  @Test
+  public void testVfsUtilCopyMustCopyBOMCorrectly() throws IOException {
+    File file = tempDir.newFile("test.txt");
+    VirtualFile vFile = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(file);
+    assertNotNull(vFile);
+    assertFalse(vFile.isDirectory());
+    WriteAction.runAndWait(() -> vFile.setBinaryContent(CharsetToolkit.UTF8_BOM));
+    assertEquals("", VfsUtilCore.loadText(vFile));
+    assertArrayEquals(CharsetToolkit.UTF8_BOM, vFile.getBOM());
+    VirtualFile dir = WriteAction.computeAndWait(() -> vFile.getParent().createChildDirectory(this, "dir"));
+
+    VirtualFile copy = WriteAction.computeAndWait(() -> VfsUtil.copy(this, vFile, dir));
+
+    assertEquals("", VfsUtilCore.loadText(copy));
+    assertArrayEquals(CharsetToolkit.UTF8_BOM, copy.getBOM());
+  }
+
+  @Test
+  public void testVfsUtilCopyMustCopyBOMCorrectlyForFileUnderProjectRoot() throws IOException {
+    File dir1 = tempDir.newDirectory("dir1");
+    Project project = PlatformTestUtil.loadAndOpenProject(Paths.get(dir1.getPath()), getTestRootDisposable());
+    WriteAction.runAndWait(() -> {
+      VirtualFile root = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(dir1);
+      Module module1 = PsiTestUtil.addModule(project, ModuleType.EMPTY, "module1", root);
+      ModuleRootModificationUtil.addContentRoot(module1, root);
+      File f = new File(dir1, "file.txt");
+      FileUtil.writeToFile(f, CharsetToolkit.UTF8_BOM);
+      VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(f);
+      assertTrue(ProjectFileIndex.getInstance(project).isInContent(file));
+      assertEquals("", VfsUtilCore.loadText(file));
+      assertEquals("", VfsUtilCore.loadText(file));
+      assertArrayEquals(CharsetToolkit.UTF8_BOM, file.getBOM());
+      VirtualFile dir2 = root.createChildDirectory(this, "dir2");
+      VirtualFile copy = VfsUtil.copy(this, file, dir2);
+      assertEquals("", VfsUtilCore.loadText(copy));
+      assertEquals("", VfsUtilCore.loadText(copy));
+      assertArrayEquals(CharsetToolkit.UTF8_BOM, copy.getBOM());
+    });
+  }
+
+  @Test
+  public void testVfsUtilCopyMustCopyBOMLessFileCorrectlyWhenEncodingProjectManagerBOMForNewFilesOptionIsSetToTrue() throws IOException {
+    File dir1 = tempDir.newDirectory("dir1");
+    Project project = PlatformTestUtil.loadAndOpenProject(Paths.get(dir1.getPath()), getTestRootDisposable());
+    WriteAction.runAndWait(() -> {
+      ((EncodingProjectManagerImpl)EncodingProjectManager.getInstance(project)).setBOMForNewUtf8Files(
+        EncodingProjectManagerImpl.BOMForNewUTF8Files.ALWAYS);
+      VirtualFile root = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(dir1);
+      Module module1 = PsiTestUtil.addModule(project, ModuleType.EMPTY, "module1", root);
+      ModuleRootModificationUtil.addContentRoot(module1, root);
+      File f = new File(dir1, "file.txt");
+      FileUtil.writeToFile(f, "xxx");
+      VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(f);
+      assertTrue(ProjectFileIndex.getInstance(project).isInContent(file));
+      assertEquals("xxx", VfsUtilCore.loadText(file));
+      assertEquals("xxx", VfsUtilCore.loadText(file));
+      assertArrayEquals(null, file.getBOM());
+      VirtualFile dir2 = root.createChildDirectory(this, "dir2");
+      VirtualFile copy = VfsUtil.copy(this, file, dir2);
+      assertEquals("xxx", VfsUtilCore.loadText(copy));
+      assertEquals("xxx", VfsUtilCore.loadText(copy));
+      assertArrayEquals(null, copy.getBOM());
+    });
+  }
+
+  @Test
+  public void refreshAndFindFileMustUpdateParentDirectoryCaseSensitivityToReturnCorrectFile() throws IOException {
+    IoTestUtil.assumeWindows();
+    IoTestUtil.assumeWslPresence();
+    assumeTrue("'fsutil.exe' needs elevated privileges to work", SuperUserStatus.isSuperUser());
+
+    File dir = new File(tempDir.getRoot(), "dir");
+    File file = new File(dir, "child.txt");
+    assertFalse(file.exists());
+    assertEquals(tempDir.getRoot().toString(), FileAttributes.CaseSensitivity.INSENSITIVE, FileSystemUtil.readParentCaseSensitivity(tempDir.getRoot()));
+
+    assertTrue(dir.mkdirs());
+    assertTrue(file.createNewFile());
+
+    IoTestUtil.setCaseSensitivity(dir, true);
+    File file2 = new File(dir, "CHILD.TXT");
+    assertTrue(file2.createNewFile());
+    VirtualFile vFile2 = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(file2);
+    assertNotNull(vFile2);
+    assertEquals("CHILD.TXT", vFile2.getName());
+    assertTrue(vFile2.isCaseSensitive());
+    assertTrue(vFile2.getParent().isCaseSensitive());
+    assertEquals(FileAttributes.CaseSensitivity.SENSITIVE, ((VirtualDirectoryImpl)vFile2.getParent()).getChildrenCaseSensitivity());
+  }
+
+  @Test
+  public void pathEqualsWorksForWslPaths() {
+    String wslName = IoTestUtil.assumeWorkingWslDistribution();
+    File usrBinFile = new File("\\\\wsl$\\" + wslName + "\\usr\\bin\\");
+    assertTrue(usrBinFile + " doesn't exist", usrBinFile.exists());
+    VirtualFile usrBin = LocalFileSystem.getInstance().findFileByIoFile(usrBinFile);
+    assertTrue(VfsUtilCore.pathEqualsTo(usrBin, "\\\\wsl$\\" + wslName + "\\usr\\bin\\"));
+    assertTrue(VfsUtilCore.pathEqualsTo(usrBin, "//wsl$/" + wslName + "/usr/bin"));
+    assertTrue(VfsUtilCore.pathEqualsTo(usrBin, "//wsl$/" + wslName + "/usr/bin/"));
+    assertFalse(VfsUtilCore.pathEqualsTo(usrBin, "//xxx$/" + wslName + "/usr/bin/"));
+    assertFalse(VfsUtilCore.pathEqualsTo(usrBin, "//wsl$/xxx/usr/bin/"));
+    assertFalse(VfsUtilCore.pathEqualsTo(usrBin.getParent(), "//wsl$/xxx/usr"));
+  }
+
+  @Test
+  public void testGetPathForVFileCreateEventForJarReturnsNormalizedPathSeparators() {
+    File jarFile = IoTestUtil.createTestJar(tempDir.newFile("test.jar"));
+    assertNotNull(LocalFileSystem.getInstance().refreshAndFindFileByIoFile(jarFile));
+    VirtualFile jarRoot = VirtualFileManager.getInstance().findFileByUrl("jar://" + FileUtil.toSystemIndependentName(jarFile.getPath()) + "!/");
+    assertNotNull(jarRoot);
+
+    VFileCreateEvent event = new VFileCreateEvent(this, jarRoot, "x.txt", false, null, null, false, null);
+    assertEquals(FileUtil.toSystemIndependentName(jarFile.getPath()) + "!/x.txt", event.getPath());
   }
 }
