@@ -1,51 +1,38 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.util.concurrency;
 
+import com.intellij.concurrency.ConcurrentCollectionFactory;
 import com.intellij.diagnostic.ThreadDumper;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.Disposer;
-import com.intellij.openapi.util.EmptyRunnable;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.testFramework.LoggedErrorProcessor;
-import com.intellij.testFramework.TestLoggerFactory;
 import com.intellij.util.ConcurrencyUtil;
 import com.intellij.util.TimeoutUtil;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.UIUtil;
-import junit.framework.TestCase;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.ide.PooledThreadExecutor;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
-public class BoundedTaskExecutorTest extends TestCase {
-  static {
-    Logger.setFactory(TestLoggerFactory.class);
+public class BoundedTaskExecutorTest extends CatchLogErrorsInAllThreadsTestCase {
+  private static final Logger LOG = Logger.getInstance(BoundedTaskExecutorTest.class);
+
+  @Override
+  protected void setUp() throws Exception {
+    super.setUp();
+    awaitAppPoolQuiescence("Can't start test: ");
   }
 
-  private static final Logger LOG = Logger.getInstance(BoundedTaskExecutorTest.class);
-  
   @Override
   protected void tearDown() throws Exception {
+    //noinspection SSBasedInspection
     try {
       awaitAppPoolQuiescence("After tear down ");
     }
@@ -54,10 +41,8 @@ public class BoundedTaskExecutorTest extends TestCase {
     }
   }
 
-  @Override
-  protected void setUp() throws Exception {
-    super.setUp();
-    awaitAppPoolQuiescence("Can't start test: ");
+  private String getPoolName() {
+    return "A"+getName();
   }
 
   private static void awaitAppPoolQuiescence(String msg) {
@@ -67,7 +52,7 @@ public class BoundedTaskExecutorTest extends TestCase {
         .filter(thread -> thread.getName().startsWith(AppScheduledExecutorService.POOLED_THREAD_PREFIX))
         .filter(thread -> thread.getState() == Thread.State.RUNNABLE)
         .filter(thread -> thread.getStackTrace().length != 0) // there can be RUNNABLE zombies with empty stacktrace
-        .collect(Collectors.toList());
+        .toList();
 
       long finish = System.currentTimeMillis();
       if (alive.isEmpty()) break;
@@ -82,7 +67,7 @@ public class BoundedTaskExecutorTest extends TestCase {
     for (int maxTasks=1; maxTasks<5;maxTasks++) {
       LOG.debug("maxTasks = " + maxTasks);
       ExecutorService backendExecutor = Executors.newCachedThreadPool(ConcurrencyUtil.newNamedThreadFactory("maxTasks = " + maxTasks));
-      ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(), backendExecutor, maxTasks);
+      ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(), backendExecutor, maxTasks);
       AtomicInteger running = new AtomicInteger();
       AtomicInteger max = new AtomicInteger();
       AtomicInteger executed = new AtomicInteger();
@@ -116,11 +101,11 @@ public class BoundedTaskExecutorTest extends TestCase {
 
   public void testCallableReallyReturnsValue() throws Exception{
     ExecutorService backendExecutor = Executors.newCachedThreadPool(ConcurrencyUtil.newNamedThreadFactory(getName()));
-    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(), backendExecutor, 1);
+    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(), backendExecutor, 1);
 
     Future<Integer> f1 = executor.submit(() -> 42);
-    Integer result = f1.get();
-    assertEquals(42, result.intValue());
+    int result = f1.get();
+    assertEquals(42, result);
     executor.shutdownNow();
     if (!executor.awaitTermination(100, TimeUnit.SECONDS)) fail(ThreadDumper.dumpThreadsToString());
     backendExecutor.shutdownNow();
@@ -130,7 +115,7 @@ public class BoundedTaskExecutorTest extends TestCase {
   public void testEarlyCancelPreventsRunning() throws ExecutionException, InterruptedException {
     AtomicBoolean run = new AtomicBoolean();
     ExecutorService backendExecutor = Executors.newCachedThreadPool(ConcurrencyUtil.newNamedThreadFactory(getName()));
-    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(), backendExecutor, 1);
+    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(), backendExecutor, 1);
 
     int delay = 1000;
     Future<?> s1 = executor.submit(() -> TimeoutUtil.sleep(delay));
@@ -153,7 +138,7 @@ public class BoundedTaskExecutorTest extends TestCase {
   public void testStressWhenSomeTasksCallOtherTasksGet() throws Exception {
     BoundedScheduledExecutorTest.doTestBoundedExecutor(
       getName(),
-      (backendExecutor, maxSimultaneousTasks) -> AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(), backendExecutor, maxSimultaneousTasks),
+      (backendExecutor, maxSimultaneousTasks) -> AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(), backendExecutor, maxSimultaneousTasks),
       maxSimultaneousTasks -> 3000,
       (executor, runnable, i)-> executor.submit(runnable));
 
@@ -161,12 +146,12 @@ public class BoundedTaskExecutorTest extends TestCase {
 
   public void testSequentialSubmitsMustExecuteSequentially() throws ExecutionException, InterruptedException {
     ExecutorService backendExecutor = Executors.newCachedThreadPool(ConcurrencyUtil.newNamedThreadFactory(getName()));
-    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(), backendExecutor, 1);
+    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(), backendExecutor, 1);
     int N = 100000;
     StringBuffer log = new StringBuffer(N*4);
     StringBuilder expected = new StringBuilder(N * 4);
 
-    Future[] futures = new Future[N];
+    Future<?>[] futures = new Future[N];
     for (int i = 0; i < N; i++) {
       String text = i + " ";
       futures[i] = executor.submit(() -> log.append(text));
@@ -188,7 +173,7 @@ public class BoundedTaskExecutorTest extends TestCase {
     ExecutorService backendExecutor = Executors.newCachedThreadPool(ConcurrencyUtil.newNamedThreadFactory(getName()));
     int maxSimultaneousTasks = 1;
     final Disposable myDisposable = Disposer.newDisposable();
-    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(), backendExecutor, maxSimultaneousTasks, myDisposable);
+    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(), backendExecutor, maxSimultaneousTasks, myDisposable);
     AtomicInteger running = new AtomicInteger();
     AtomicInteger maxThreads = new AtomicInteger();
 
@@ -213,7 +198,7 @@ public class BoundedTaskExecutorTest extends TestCase {
 
           @Override
           public String toString() {
-            return "iter " + finalI;
+            return "iteration " + finalI;
           }
         });
         CountDownLatch waitCompleted = new CountDownLatch(1);
@@ -269,7 +254,7 @@ public class BoundedTaskExecutorTest extends TestCase {
         assertTrue(waitCompleted.await(1, TimeUnit.MINUTES));
         assertTrue(future.isDone());
       }
-      UIUtil.invokeAndWaitIfNeeded((Runnable)() -> {
+      UIUtil.invokeAndWaitIfNeeded(() -> {
         try {
           ((BoundedTaskExecutor)executor).waitAllTasksExecuted(1, TimeUnit.MINUTES);
         }
@@ -289,11 +274,11 @@ public class BoundedTaskExecutorTest extends TestCase {
   }
 
   public void testShutdownNowMustCancel() throws InterruptedException {
-    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(),PooledThreadExecutor.INSTANCE, 1);
+    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(),AppExecutorUtil.getAppExecutorService(), 1);
     int N = 100000;
     StringBuffer log = new StringBuffer(N*4);
 
-    Future[] futures = new Future[N];
+    Future<?>[] futures = new Future[N];
     for (int i = 0; i < N; i++) {
       futures[i] = executor.submit(() -> log.append(" "));
     }
@@ -303,18 +288,7 @@ public class BoundedTaskExecutorTest extends TestCase {
     Thread.sleep(1000); // wait for a rare chance of a task executing right now
     assertEquals(N - log.length(), runnables.size());
 
-    try {
-      executor.execute(EmptyRunnable.getInstance());
-      fail("Must reject");
-    }
-    catch (RejectedExecutionException ignored) {
-    }
-    try {
-      executor.execute(EmptyRunnable.getInstance());
-      fail("Must reject");
-    }
-    catch (RejectedExecutionException ignored) {
-    }
+    BoundedScheduledExecutorTest.checkEveryPossibleSubmitThrows(executor);
 
     for (int i = 0; i < log.length(); i++) {
       assertFalse(futures[i].isCancelled());
@@ -329,29 +303,18 @@ public class BoundedTaskExecutorTest extends TestCase {
   }
 
   public void testShutdownMustDisableSubmit() throws ExecutionException, InterruptedException {
-    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(),PooledThreadExecutor.INSTANCE, 1);
+    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(),AppExecutorUtil.getAppExecutorService(), 1);
     int N = 100000;
     StringBuffer log = new StringBuffer(N*4);
 
-    Future[] futures = new Future[N];
+    Future<?>[] futures = new Future[N];
     for (int i = 0; i < N; i++) {
       futures[i] = executor.submit(() -> log.append(" "));
     }
     executor.shutdown();
     assertTrue(executor.isShutdown());
 
-    try {
-      executor.execute(EmptyRunnable.getInstance());
-      fail("Must reject");
-    }
-    catch (RejectedExecutionException ignored) {
-    }
-    try {
-      executor.execute(EmptyRunnable.getInstance());
-      fail("Must reject");
-    }
-    catch (RejectedExecutionException ignored) {
-    }
+    BoundedScheduledExecutorTest.checkEveryPossibleSubmitThrows(executor);
 
     for (int i = 0; i < N; i++) {
       assertFalse(futures[i].isCancelled());
@@ -363,15 +326,15 @@ public class BoundedTaskExecutorTest extends TestCase {
     if (!executor.awaitTermination(100, TimeUnit.SECONDS)) fail(ThreadDumper.dumpThreadsToString());
   }
 
-  public void testNoExtraThreadsAreEverCreated() throws InterruptedException {
+  public void testNoExtraThreadsAreEverCreated() throws InterruptedException, ExecutionException {
     for (int nMaxThreads=1; nMaxThreads<10; nMaxThreads++) {
       LOG.debug("nMaxThreads = " + nMaxThreads);
-      ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(),nMaxThreads);
+      ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(),nMaxThreads);
       int N = 1000000;
-      Set<Thread> workers = ContainerUtil.newConcurrentSet();
+      Set<Thread> workers = ConcurrentCollectionFactory.createConcurrentSet();
 
       CountDownLatch allStarted = new CountDownLatch(1);
-      List<Future> saturate = ContainerUtil.map(Collections.nCopies(nMaxThreads, null), o -> executor.submit(new Runnable() {
+      List<Future<?>> saturate = ContainerUtil.map(Collections.nCopies(nMaxThreads, null), o -> executor.submit(new Runnable() {
         @Override
         public void run() {
           try {
@@ -389,7 +352,7 @@ public class BoundedTaskExecutorTest extends TestCase {
       }));
 
 
-      List<Future> futures = new ArrayList<>(N);
+      List<Future<?>> futures = new ArrayList<>(N);
       for (int i = 0; i < N; i++) {
         final int finalI = i;
         futures.add(executor.submit(new Runnable() {
@@ -407,8 +370,8 @@ public class BoundedTaskExecutorTest extends TestCase {
       }
 
       allStarted.countDown();
-      saturate.forEach(BoundedTaskExecutorTest::doGet);
-      futures.forEach(BoundedTaskExecutorTest::doGet);
+      ConcurrencyUtil.getAll(saturate);
+      ConcurrencyUtil.getAll(futures);
 
       //System.out.println("workers.size() = " + workers.size());
       assertTrue("Must create no more than "+nMaxThreads+" workers but got: "+workers,
@@ -418,23 +381,14 @@ public class BoundedTaskExecutorTest extends TestCase {
     }
   }
 
-  private static Object doGet(Future future) {
-    try {
-      return future.get();
-    }
-    catch (Exception e) {
-      throw new RuntimeException(e);
-    }
-  }
-
   public void testAwaitTerminationDoesWait() throws InterruptedException {
     for (int maxTasks=1; maxTasks<10; maxTasks++) {
       LOG.debug("maxTasks = " + maxTasks);
-      ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(),PooledThreadExecutor.INSTANCE, maxTasks);
+      ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(),AppExecutorUtil.getAppExecutorService(), maxTasks);
       int N = 1000;
       StringBuffer log = new StringBuffer(N*4);
 
-      Future[] futures = new Future[N];
+      Future<?>[] futures = new Future[N];
       for (int i = 0; i < N; i++) {
         int finalI = i;
         futures[i] = executor.submit(() -> {
@@ -447,7 +401,7 @@ public class BoundedTaskExecutorTest extends TestCase {
       executor.shutdown();
       if (!executor.awaitTermination(100, TimeUnit.SECONDS)) fail(ThreadDumper.dumpThreadsToString());
 
-      for (Future future : futures) {
+      for (Future<?> future : futures) {
         assertTrue(future.isDone());
         assertFalse(future.isCancelled());
       }
@@ -456,7 +410,7 @@ public class BoundedTaskExecutorTest extends TestCase {
   }
 
   public void testAwaitTerminationDoesNotCompletePrematurely() throws InterruptedException {
-    ExecutorService executor2 = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(),PooledThreadExecutor.INSTANCE, 1);
+    ExecutorService executor2 = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(),AppExecutorUtil.getAppExecutorService(), 1);
     Future<?> future = executor2.submit(() -> TimeoutUtil.sleep(10000));
     executor2.shutdown();
     assertFalse(executor2.awaitTermination(1, TimeUnit.SECONDS));
@@ -468,32 +422,72 @@ public class BoundedTaskExecutorTest extends TestCase {
   }
 
   public void testErrorsThrownInFiredAndForgottenTaskMustBeLogged() {
-    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getName(),PooledThreadExecutor.INSTANCE, 1);
-    LoggedErrorProcessor oldInstance = LoggedErrorProcessor.getInstance();
-    try {
-      List<Throwable> errors = Collections.synchronizedList(new ArrayList<>());
-      LoggedErrorProcessor.setNewInstance(new LoggedErrorProcessor() {
-        @Override
-        public void processError(String message, Throwable t, String[] details, @NotNull org.apache.log4j.Logger logger) {
-          errors.add(t);
-        }
-      });
-      AtomicBoolean executed = new AtomicBoolean();
-      executor.execute(() -> {
+    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(),AppExecutorUtil.getAppExecutorService(), 1);
+    Throwable error = LoggedErrorProcessor.executeAndReturnLoggedError(() -> {
+      try {
+        AtomicBoolean executed = new AtomicBoolean();
+        executor.execute(() -> {
+          try {
+            throw new Error("error "+getName());
+          }
+          finally {
+            executed.set(true);
+          }
+        });
+        while (!executed.get()) {}
+        TimeoutUtil.sleep(100); // that tiny moment between throwing new Error() and catching it in BoundedTaskExecutor.wrapAndExecute()
+      }
+      finally {
+        executor.shutdownNow();
+      }
+    });
+    assertEquals("error " + getName(), error.getMessage());
+  }
+
+  public void testSeveralWaitAllTasksExecutedDontCauseDeadlock() throws Throwable {
+    BoundedTaskExecutor executor = (BoundedTaskExecutor)AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(), AppExecutorUtil.getAppExecutorService(), 2);
+    for (int i=0; i<1000 ;i++) {
+      Future<?> future1 = executor.submit(() -> TimeoutUtil.sleep(1));
+      Future<?> future2 = executor.submit(() -> TimeoutUtil.sleep(1));
+      Future<?> wait1 = AppExecutorUtil.getAppExecutorService().submit(() -> {
         try {
-          throw new Error("error "+getName());
+          executor.waitAllTasksExecuted(10, TimeUnit.SECONDS);
         }
-        finally {
-          executed.set(true);
+        catch (Exception e) {
+          throw new RuntimeException(e);
         }
       });
-      while (!executed.get()) {}
-      TimeoutUtil.sleep(100); // that tiny moment between throwing new Error() and catching it in BoundedTaskExecutor.wrapAndExecute()
-      assertTrue(errors.toString(), errors.stream().anyMatch(t -> ("error " + getName()).equals(t.getMessage())));
+      Future<?> wait2 = AppExecutorUtil.getAppExecutorService().submit(() -> {
+        try {
+          executor.waitAllTasksExecuted(10, TimeUnit.SECONDS);
+        }
+        catch (Exception e) {
+          throw new RuntimeException(e);
+        }
+      });
+      future1.get();
+      future2.get();
+      wait1.get();
+      wait2.get();
     }
-    finally {
-      LoggedErrorProcessor.setNewInstance(oldInstance);
-      executor.shutdownNow();
-    }
+  }
+
+  public void testIsTerminatedMustQueryIfAllTasksAreExecuted() throws InterruptedException, ExecutionException {
+    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(),AppExecutorUtil.getAppExecutorService(), 1);
+    Future<?> future = executor.submit(() -> TimeoutUtil.sleep(2_000));
+    executor.shutdown();
+    assertTrue(executor.isShutdown());
+    assertFalse(executor.isTerminated());
+    future.get();
+    TimeoutUtil.sleep(20); // to let BoundedExecutor catchup the task termination
+    assertTrue(executor.toString(), executor.isTerminated());
+  }
+
+  public void testShutdownMustBeIdempotentByExecutorServiceContract() {
+    ExecutorService executor = AppExecutorUtil.createBoundedApplicationPoolExecutor(getPoolName(),AppExecutorUtil.getAppExecutorService(), 1);
+    executor.shutdown();
+    assertTrue(executor.isShutdown());
+    executor.shutdown();
+    assertTrue(executor.isShutdown());
   }
 }
