@@ -5,9 +5,9 @@ import com.intellij.execution.ExecutionException;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.project.ProjectManager;
-import com.intellij.openapi.project.ProjectManagerListener;
+import com.intellij.openapi.project.ProjectCloseListener;
 import com.intellij.openapi.util.EmptyRunnable;
+import com.intellij.remoteServer.CloudBundle;
 import com.intellij.remoteServer.configuration.RemoteServer;
 import com.intellij.remoteServer.configuration.deployment.DeploymentConfiguration;
 import com.intellij.remoteServer.impl.runtime.deployment.DeploymentImpl;
@@ -25,12 +25,13 @@ import com.intellij.remoteServer.runtime.deployment.debug.DebugConnectionDataNot
 import com.intellij.remoteServer.runtime.deployment.debug.DebugConnector;
 import com.intellij.util.Consumer;
 import com.intellij.util.messages.MessageBusConnection;
+import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 public class ServerConnectionImpl<D extends DeploymentConfiguration> implements ServerConnection<D> {
   private static final Logger LOG = Logger.getInstance(ServerConnectionImpl.class);
@@ -41,7 +42,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   private MessageBusConnection myMessageBusConnection;
 
   private volatile ConnectionStatus myStatus = ConnectionStatus.DISCONNECTED;
-  private volatile String myStatusText;
+  private volatile @Nls String myStatusText;
   private volatile ServerRuntimeInstance<D> myRuntimeInstance;
   private final Map<Project, LogManagersForProject> myPerProjectLogManagers = new ConcurrentHashMap<>();
   private final MyDeployments myAllDeployments;
@@ -68,14 +69,25 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   }
 
   @Override
+  @Nls
   public @NotNull String getStatusText() {
     return myStatusText != null ? myStatusText : myStatus.getPresentableText();
+  }
+
+  /**
+   * @deprecated Workaround fpr CWM-3308, in general, the runtime instance is internal and should not be exposed
+   */
+  @ApiStatus.Internal
+  @Deprecated(forRemoval = true)
+  @Nullable
+  public ServerRuntimeInstance<D> getServerRuntimeInstance() {
+    return myRuntimeInstance;
   }
 
   @Override
   public void connect(final @NotNull Runnable onFinished) {
     doDisconnect();
-    connectIfNeeded(new ServerConnector.ConnectionCallback<D>() {
+    connectIfNeeded(new ServerConnector.ConnectionCallback<>() {
       @Override
       public void connected(@NotNull ServerRuntimeInstance<D> serverRuntimeInstance) {
         onFinished.run();
@@ -114,8 +126,9 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   }
 
   @Override
-  public void deploy(final @NotNull DeploymentTask<D> task, final @NotNull java.util.function.Consumer<String> onDeploymentStarted) {
-    connectIfNeeded(new ConnectionCallbackBase<D>() {
+  public void deploy(final @NotNull DeploymentTask<D> task,
+                     final java.util.function.@NotNull Consumer<? super String> onDeploymentStarted) {
+    connectIfNeeded(new ConnectionCallbackBase<>() {
       @Override
       public void connected(@NotNull ServerRuntimeInstance<D> instance) {
         LocalDeploymentImpl<?> deployment = new LocalDeploymentImpl<>(instance,
@@ -128,8 +141,8 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
         myAllDeployments.addLocal(deployment);
 
         DeploymentLogManagerImpl logManager = myPerProjectLogManagers.computeIfAbsent(task.getProject(), LogManagersForProject::new)
-                                                                     .findOrCreateManager(deployment)
-                                                                     .withMainHandlerVisible(true);
+          .findOrCreateManager(deployment)
+          .withMainHandlerVisible(true);
 
         LoggingHandlerImpl handler = logManager.getMainLoggingHandler();
         handler.printlnSystemMessage("Deploying '" + deploymentName + "'...");
@@ -153,7 +166,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
   @Override
   public void computeDeployments(final @NotNull Runnable onFinished) {
-    connectIfNeeded(new ConnectionCallbackBase<D>() {
+    connectIfNeeded(new ConnectionCallbackBase<>() {
       @Override
       public void connected(@NotNull ServerRuntimeInstance<D> instance) {
         computeDeployments(instance, onFinished);
@@ -163,7 +176,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
   private void computeDeployments(ServerRuntimeInstance<D> instance, final Runnable onFinished) {
     instance.computeDeployments(new ServerRuntimeInstance.ComputeDeploymentsCallback() {
-      private final List<DeploymentImpl> myCollectedDeployments = Collections.synchronizedList(new ArrayList<>());
+      private final List<DeploymentImpl<?>> myCollectedDeployments = Collections.synchronizedList(new ArrayList<>());
 
       @Override
       public void addDeployment(@NotNull String deploymentName) {
@@ -179,11 +192,11 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       public Deployment addDeployment(@NotNull String name,
                                       @Nullable DeploymentRuntime runtime,
                                       @Nullable DeploymentStatus status,
-                                      @Nullable String statusText) {
+                                      @Nullable @Nls String statusText) {
         if (status == null) {
           status = DeploymentStatus.DEPLOYED;
         }
-        DeploymentImpl result = myAllDeployments.updateRemoteState(name, runtime, status, statusText);
+        DeploymentImpl<?> result = myAllDeployments.updateRemoteState(name, runtime, status, statusText);
         if (result == null) {
           result = new DeploymentImpl<>(ServerConnectionImpl.this,
                                         name,
@@ -210,7 +223,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       public void errorOccurred(@NotNull String errorMessage) {
         myAllDeployments.replaceRemotesWith(Collections.emptyList());
 
-        myStatusText = "Cannot obtain deployments: " + errorMessage;
+        myStatusText = CloudBundle.message("ServerConnectionImpl.error.cannot.obtain.deployments", errorMessage);
         myEventDispatcher.queueConnectionStatusChanged(ServerConnectionImpl.this);
         myEventDispatcher.queueDeploymentsChanged(ServerConnectionImpl.this);
         onFinished.run();
@@ -219,17 +232,17 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   }
 
   @Override
-  public void undeploy(@NotNull Deployment deployment, final @NotNull DeploymentRuntime runtime) {
+  public void undeploy(@NotNull Deployment deployment, final @Nullable DeploymentRuntime runtime) {
     String deploymentName = deployment.getName();
     final MyDeployments.UndeployTransition undeployInProgress = myAllDeployments.startUndeploy(deploymentName);
 
     myEventDispatcher.queueDeploymentsChanged(this);
 
     final List<LoggingHandlerImpl> handlers = myPerProjectLogManagers.values().stream()
-                                                                     .map(nextForProject -> nextForProject.findManager(deployment))
-                                                                     .filter(Objects::nonNull)
-                                                                     .map(DeploymentLogManagerImpl::getMainLoggingHandler)
-                                                                     .collect(Collectors.toList());
+      .map(nextForProject -> nextForProject.findManager(deployment))
+      .filter(Objects::nonNull)
+      .map(DeploymentLogManagerImpl::getMainLoggingHandler)
+      .toList();
 
     final Consumer<String> logConsumer = message -> {
       if (handlers.isEmpty()) {
@@ -241,7 +254,8 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     };
 
     logConsumer.consume("Undeploying '" + deploymentName + "'...");
-    runtime.undeploy(new DeploymentRuntime.UndeploymentTaskCallback() {
+
+    DeploymentRuntime.UndeploymentTaskCallback undeploymentTaskCallback = new DeploymentRuntime.UndeploymentTaskCallback() {
       @Override
       public void succeeded() {
         logConsumer.consume("'" + deploymentName + "' has been undeployed successfully.");
@@ -270,7 +284,14 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
         myEventDispatcher.queueDeploymentsChanged(ServerConnectionImpl.this);
       }
-    });
+    };
+
+    if (runtime == null) {
+      undeploymentTaskCallback.succeeded();
+    }
+    else {
+      runtime.undeploy(undeploymentTaskCallback);
+    }
   }
 
   public void disposeAllLogs(@NotNull DeploymentImpl deployment) {
@@ -289,7 +310,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   private void setupProjectListener() {
     if (myMessageBusConnection == null) {
       myMessageBusConnection = ApplicationManager.getApplication().getMessageBus().connect();
-      myMessageBusConnection.subscribe(ProjectManager.TOPIC, new ProjectManagerListener() {
+      myMessageBusConnection.subscribe(ProjectCloseListener.TOPIC, new ProjectCloseListener() {
         @Override
         public void projectClosed(@NotNull Project project) {
           onProjectClosed(project);
@@ -307,7 +328,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     }
 
     setStatus(ConnectionStatus.CONNECTING);
-    myConnector.connect(new ServerConnector.ConnectionCallback<D>() {
+    myConnector.connect(new ServerConnector.ConnectionCallback<>() {
       @Override
       public void connected(@NotNull ServerRuntimeInstance<D> instance) {
         setStatus(ConnectionStatus.CONNECTED);
@@ -317,7 +338,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       }
 
       @Override
-      public void errorOccurred(@NotNull String errorMessage) {
+      public void errorOccurred(@NotNull @Nls String errorMessage) {
         setStatus(ConnectionStatus.DISCONNECTED, errorMessage);
         myRuntimeInstance = null;
         callback.errorOccurred(errorMessage);
@@ -329,7 +350,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     setStatus(status, null);
   }
 
-  private void setStatus(final ConnectionStatus status, String statusText) {
+  private void setStatus(final ConnectionStatus status, @Nls String statusText) {
     myStatus = status;
     myStatusText = statusText;
     myEventDispatcher.queueConnectionStatusChanged(this);
@@ -338,7 +359,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   public void changeDeploymentState(@NotNull DeploymentImpl deployment,
                                     @Nullable DeploymentRuntime deploymentRuntime,
                                     @NotNull DeploymentStatus oldStatus, @NotNull DeploymentStatus newStatus,
-                                    @Nullable String statusText) {
+                                    @Nullable @Nls String statusText) {
 
     if (myAllDeployments.updateAnyState(deployment, deploymentRuntime, oldStatus, newStatus, statusText)) {
       myEventDispatcher.queueDeploymentsChanged(this);
@@ -397,16 +418,21 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     private final String myDeploymentName;
     private final DeploymentTaskImpl<D> myDeploymentTask;
     private final LoggingHandlerImpl myLoggingHandler;
-    private final DeploymentImpl myDeployment;
+    private final DeploymentImpl<?> myDeployment;
 
     DeploymentOperationCallbackImpl(String deploymentName,
-                                           DeploymentTaskImpl<D> deploymentTask,
-                                           LoggingHandlerImpl handler,
-                                           DeploymentImpl deployment) {
+                                    DeploymentTaskImpl<D> deploymentTask,
+                                    LoggingHandlerImpl handler,
+                                    DeploymentImpl<?> deployment) {
       myDeploymentName = deploymentName;
       myDeploymentTask = deploymentTask;
       myLoggingHandler = handler;
       myDeployment = deployment;
+    }
+
+    @Override
+    public void started(@NotNull DeploymentRuntime deploymentRuntime) {
+      myDeployment.changeState(myDeployment.getStatus(), DeploymentStatus.DEPLOYING, null, deploymentRuntime);
     }
 
     @Override
@@ -442,10 +468,18 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     }
 
     @Override
-    public void errorOccurred(@NotNull String errorMessage) {
+    public void errorOccurred(@NotNull @Nls String errorMessage) {
       myLoggingHandler.printlnSystemMessage("Failed to deploy '" + myDeploymentName + "': " + errorMessage);
       myAllDeployments.updateAnyState(myDeployment, null,
                                       DeploymentStatus.DEPLOYING, DeploymentStatus.NOT_DEPLOYED, errorMessage);
+      myEventDispatcher.queueDeploymentsChanged(ServerConnectionImpl.this);
+    }
+
+    @Override
+    public void errorOccurred(@NotNull @Nls String errorMessage,
+                              @NotNull DeploymentRuntime failedDeployment) {
+      myLoggingHandler.printlnSystemMessage("Failed to deploy '" + myDeploymentName + "': " + errorMessage);
+      myDeployment.changeState(DeploymentStatus.DEPLOYING, DeploymentStatus.NOT_DEPLOYED, errorMessage, failedDeployment);
       myEventDispatcher.queueDeploymentsChanged(ServerConnectionImpl.this);
     }
   }
@@ -461,8 +495,8 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   private static class MyDeployments {
     private final Object myLock = new Object();
 
-    private final Map<String, DeploymentImpl> myRemoteDeployments = new HashMap<>();
-    private final Map<String, LocalDeploymentImpl> myLocalDeployments = new HashMap<>();
+    private final Map<String, DeploymentImpl<?>> myRemoteDeployments = new HashMap<>();
+    private final Map<String, LocalDeploymentImpl<?>> myLocalDeployments = new HashMap<>();
     private List<Deployment> myCachedAllDeployments;
     private final Comparator<? super Deployment> myDeploymentComparator;
 
@@ -477,11 +511,11 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       }
     }
 
-    public void replaceRemotesWith(@NotNull Collection<DeploymentImpl> newDeployments) {
+    public void replaceRemotesWith(@NotNull Collection<? extends DeploymentImpl> newDeployments) {
       synchronized (myLock) {
         myRemoteDeployments.clear();
         myCachedAllDeployments = null;
-        for (DeploymentImpl deployment : newDeployments) {
+        for (DeploymentImpl<?> deployment : newDeployments) {
           myRemoteDeployments.put(deployment.getName(), deployment);
         }
       }
@@ -490,10 +524,10 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     public @Nullable DeploymentImpl updateRemoteState(@NotNull String deploymentName,
                                                       @Nullable DeploymentRuntime deploymentRuntime,
                                                       @NotNull DeploymentStatus deploymentStatus,
-                                                      @Nullable String deploymentStatusText) {
+                                                      @Nullable @Nls String deploymentStatusText) {
 
       synchronized (myLock) {
-        DeploymentImpl result = myRemoteDeployments.get(deploymentName);
+        DeploymentImpl<?> result = myRemoteDeployments.get(deploymentName);
         if (result != null && !result.getStatus().isTransition()) {
           result.changeState(result.getStatus(), deploymentStatus, deploymentStatusText, deploymentRuntime);
         }
@@ -505,7 +539,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
                                   @Nullable DeploymentRuntime deploymentRuntime,
                                   @NotNull DeploymentStatus oldStatus,
                                   @NotNull DeploymentStatus newStatus,
-                                  @Nullable String statusText) {
+                                  @Nullable @Nls String statusText) {
 
       synchronized (myLock) {
         return deployment.changeState(oldStatus, newStatus, statusText, deploymentRuntime);
@@ -516,7 +550,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       synchronized (myLock) {
         if (myCachedAllDeployments == null) {
           Collection<Deployment> result = doListDeployments();
-          myCachedAllDeployments = Collections.unmodifiableList(new ArrayList<>(result));
+          myCachedAllDeployments = List.copyOf(result);
         }
         return myCachedAllDeployments;
       }
@@ -524,10 +558,10 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
     private Collection<Deployment> doListDeployments() {
       //assumed myLock
-      Map<Deployment, DeploymentImpl> orderedDeployments = new TreeMap<>(myDeploymentComparator);
-      List<LocalDeploymentImpl> matchedLocalsBefore = new LinkedList<>();
+      Map<Deployment, DeploymentImpl<?>> orderedDeployments = new TreeMap<>(myDeploymentComparator);
+      List<LocalDeploymentImpl<?>> matchedLocalsBefore = new ArrayList<>();
 
-      for (LocalDeploymentImpl localDeployment : myLocalDeployments.values()) {
+      for (LocalDeploymentImpl<?> localDeployment : myLocalDeployments.values()) {
         if (localDeployment.hasRemoteDeloyment()) {
           matchedLocalsBefore.add(localDeployment);
         }
@@ -537,11 +571,11 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
       Set<Deployment> result = new LinkedHashSet<>(orderedDeployments.keySet());
 
-      for (DeploymentImpl remoteDeployment : myRemoteDeployments.values()) {
-        DeploymentImpl deployment = orderedDeployments.get(remoteDeployment);
+      for (DeploymentImpl<?> remoteDeployment : myRemoteDeployments.values()) {
+        DeploymentImpl<?> deployment = orderedDeployments.get(remoteDeployment);
         if (deployment != null) {
           if (deployment instanceof LocalDeploymentImpl) {
-            ((LocalDeploymentImpl)deployment).setRemoteDeployment(remoteDeployment);
+            ((LocalDeploymentImpl<?>)deployment).setRemoteDeployment(remoteDeployment);
           }
         }
         else {
@@ -550,7 +584,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       }
 
       final DeploymentStatus finishedExternally = DeploymentStatus.NOT_DEPLOYED;
-      for (LocalDeploymentImpl nextLocal : matchedLocalsBefore) {
+      for (LocalDeploymentImpl<?> nextLocal : matchedLocalsBefore) {
         if (!nextLocal.hasRemoteDeloyment()) {
           nextLocal.changeState(nextLocal.getStatus(), finishedExternally, null, null);
         }
@@ -563,9 +597,9 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     public boolean removeAllLocalForProject(@NotNull Project project) {
       synchronized (myLock) {
         boolean hasChanged = false;
-        for (Iterator<LocalDeploymentImpl> it = myLocalDeployments.values().iterator(); it.hasNext(); ) {
-          LocalDeploymentImpl nextLocal = it.next();
-          if (nextLocal.getDeploymentTask() != null && nextLocal.getDeploymentTask().getProject() == project) {
+        for (Iterator<LocalDeploymentImpl<?>> it = myLocalDeployments.values().iterator(); it.hasNext(); ) {
+          LocalDeploymentImpl<?> nextLocal = it.next();
+          if (nextLocal.getDeploymentTask().getProject() == project) {
             it.remove();
             hasChanged = true;
           }
@@ -579,7 +613,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
     public @Nullable UndeployTransition startUndeploy(@NotNull String deploymentName) {
       synchronized (myLock) {
-        DeploymentImpl deployment = myLocalDeployments.get(deploymentName);
+        DeploymentImpl<?> deployment = myLocalDeployments.get(deploymentName);
         if (deployment == null) {
           deployment = myRemoteDeployments.get(deploymentName);
         }
@@ -590,10 +624,10 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     private @NotNull List<Deployment> collectDeepChildren(@NotNull Deployment root) {
       DeepChildrenCollector collector = new DeepChildrenCollector(root.getRuntime());
       synchronized (myLock) {
-        for (LocalDeploymentImpl nextLocal : myLocalDeployments.values()) {
+        for (LocalDeploymentImpl<?> nextLocal : myLocalDeployments.values()) {
           collector.visitDeployment(nextLocal);
         }
-        for (DeploymentImpl nextRemote : myRemoteDeployments.values()) {
+        for (DeploymentImpl<?> nextRemote : myRemoteDeployments.values()) {
           collector.visitDeployment(nextRemote);
         }
       }
@@ -601,10 +635,10 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     }
 
     private class UndeployTransition {
-      private final DeploymentImpl myDeployment;
+      private final DeploymentImpl<?> myDeployment;
       private final List<Deployment> mySubDeployments;
 
-      UndeployTransition(@NotNull DeploymentImpl deployment, @NotNull List<Deployment> subDeployments) {
+      UndeployTransition(@NotNull DeploymentImpl<?> deployment, @NotNull List<Deployment> subDeployments) {
         myDeployment = deployment;
         mySubDeployments = new ArrayList<>(subDeployments);
 
@@ -613,7 +647,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
       public void succeeded() {
         synchronized (myLock) {
-          if (tryChangeToTerminalState(DeploymentStatus.NOT_DEPLOYED, true)) {
+          if (tryChangeToTerminalState(DeploymentStatus.NOT_DEPLOYED, true) || myDeployment.getRuntime() == null) {
             forgetDeployment(myDeployment);
 
             for (Deployment nextImplicitlyUndeployed : mySubDeployments) {
