@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.internal.statistic.eventLog;
 
 import com.intellij.openapi.actionSystem.ActionPlaces;
@@ -6,7 +6,10 @@ import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.actionSystem.KeyboardShortcut;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.text.StringUtil;
+import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
+import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
@@ -14,12 +17,20 @@ import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseEvent;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import static java.awt.event.KeyEvent.*;
 
+@ApiStatus.Internal
 public final class ShortcutDataProvider {
+  /**
+   * Modifiers that can be used as a separate double click shortcut (Shift+Shift as example)
+   */
+  private static final Collection<Integer> DOUBLE_CLICK_MODIFIER_KEYS = Arrays.asList(VK_CONTROL, VK_SHIFT);
+
   @Nullable
   public static String getActionEventText(@Nullable AnActionEvent event) {
     return event != null ? getInputEventText(event.getInputEvent(), event.getPlace()) : null;
@@ -41,7 +52,7 @@ public final class ShortcutDataProvider {
   }
 
   @Nullable
-  protected static String getKeyEventText(@Nullable KeyEvent key) {
+  static String getKeyEventText(@Nullable KeyEvent key) {
     if (key == null) return null;
 
     final KeyStroke keystroke = KeyStroke.getKeyStrokeForEvent(key);
@@ -49,14 +60,15 @@ public final class ShortcutDataProvider {
   }
 
   @Nullable
-  protected static String getMouseEventText(@Nullable MouseEvent event) {
+  static String getMouseEventText(@Nullable MouseEvent event) {
     if (event == null) return null;
 
     String res = getMouseButtonText(event.getButton());
+    if (event.getID() == MouseEvent.MOUSE_DRAGGED) res += "Drag";
 
     int clickCount = event.getClickCount();
     if (clickCount > 1) {
-      res += "(" + clickCount + "x)";
+      res += "(" + roundClickCount(clickCount) + "x)";
     }
 
     int modifiers = event.getModifiersEx() & ~BUTTON1_DOWN_MASK & ~BUTTON3_DOWN_MASK & ~BUTTON2_DOWN_MASK;
@@ -70,22 +82,35 @@ public final class ShortcutDataProvider {
     return res;
   }
 
+  @NotNull
+  private static String roundClickCount(int clickCount) {
+    if (clickCount < 3) return String.valueOf(clickCount);
+    if (clickCount < 5) return "3-5";
+    if (clickCount < 25) return "5-25";
+    if (clickCount < 100) return "25-100";
+    return "100+";
+  }
+
   private static String getMouseButtonText(int buttonNum) {
-    switch (buttonNum) {
-      case MouseEvent.BUTTON1:
-        return "MouseLeft";
-      case MouseEvent.BUTTON2:
-        return "MouseMiddle";
-      case MouseEvent.BUTTON3:
-        return "MouseRight";
-      default:
-        return "NoMouseButton";
-    }
+    return switch (buttonNum) {
+      case MouseEvent.BUTTON1 -> "MouseLeft";
+      case MouseEvent.BUTTON2 -> "MouseMiddle";
+      case MouseEvent.BUTTON3 -> "MouseRight";
+      default -> "NoMouseButton";
+    };
   }
 
   private static String getShortcutText(KeyboardShortcut shortcut) {
-    String results = "";
     int modifiers = shortcut.getFirstKeyStroke().getModifiers();
+    int code = shortcut.getFirstKeyStroke().getKeyCode();
+
+    // Handling shortcuts that looks like [double <modifier_key>] (to avoid FUS-551)
+    if (modifiers == 0 && DOUBLE_CLICK_MODIFIER_KEYS.contains(code)) {
+      String strCode = getLocaleUnawareKeyText(code);
+      return strCode + "+" + strCode;
+    }
+
+    String results = "";
     if (modifiers > 0) {
       final String keyModifiersText = getLocaleUnawareKeyModifiersText(modifiers);
       if (!keyModifiersText.isEmpty()) {
@@ -93,7 +118,7 @@ public final class ShortcutDataProvider {
       }
     }
 
-    results += getLocaleUnawareKeyText(shortcut.getFirstKeyStroke().getKeyCode());
+    results += getLocaleUnawareKeyText(code);
     return results;
   }
 
@@ -133,11 +158,11 @@ public final class ShortcutDataProvider {
   private static String getLocaleUnawareKeyModifiersText(int modifiers) {
     List<String> pressed = ourModifiers.stream()
       .filter(p -> (p.first & modifiers) != 0)
-      .map(p -> p.second).collect(Collectors.toList());
+      .map(p -> p.second).toList();
     return StringUtil.join(pressed, "+");
   }
 
-  private static final Int2ObjectOpenHashMap<String> ourKeyCodes = new Int2ObjectOpenHashMap<>();
+  private static final Int2ObjectMap<String> ourKeyCodes = new Int2ObjectOpenHashMap<>();
 
   static {
     ourKeyCodes.put(VK_ENTER, "Enter");
