@@ -3,6 +3,7 @@ package com.intellij.vcs.commit.message;
 
 import com.intellij.codeInspection.ex.InspectionToolWrapper;
 import com.intellij.codeInspection.ex.Tools;
+import com.intellij.openapi.actionSystem.ActionUpdateThread;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.application.WriteAction;
 import com.intellij.openapi.command.CommandProcessor;
@@ -10,9 +11,10 @@ import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.project.DumbAwareAction;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.vcs.VcsBundle;
 import com.intellij.openapi.vcs.VcsDataKeys;
 import com.intellij.openapi.vcs.ui.CommitMessage;
-import org.jetbrains.annotations.CalledWithWriteLock;
+import com.intellij.util.concurrency.annotations.RequiresWriteLock;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -20,23 +22,25 @@ import java.util.List;
 import java.util.Objects;
 import java.util.stream.Stream;
 
-import static com.intellij.util.ObjectUtils.notNull;
 import static com.intellij.util.ObjectUtils.tryCast;
 import static java.util.stream.Collectors.toList;
 
 public class ReformatCommitMessageAction extends DumbAwareAction {
 
-  public static final String NAME = "Reformat commit message";
-
   public ReformatCommitMessageAction() {
-    super(NAME);
+    super(VcsBundle.messagePointer("commit.message.intention.family.name.reformat.commit.message"));
     setEnabledInModalContext(true);
+  }
+
+  @Override
+  public @NotNull ActionUpdateThread getActionUpdateThread() {
+    return ActionUpdateThread.BGT;
   }
 
   @Override
   public void update(@NotNull AnActionEvent e) {
     Project project = e.getProject();
-    Document document = getCommitMessage(e);
+    Document document = e.getData(VcsDataKeys.COMMIT_MESSAGE_DOCUMENT);
 
     e.getPresentation().setEnabled(project != null &&
                                    document != null &&
@@ -46,25 +50,17 @@ public class ReformatCommitMessageAction extends DumbAwareAction {
   @Override
   public void actionPerformed(@NotNull AnActionEvent e) {
     Project project = Objects.requireNonNull(e.getProject());
-    Document document = Objects.requireNonNull(getCommitMessage(e));
+    Document document = e.getRequiredData(VcsDataKeys.COMMIT_MESSAGE_DOCUMENT);
 
     CommandProcessor.getInstance().executeCommand(project, () ->
-      WriteAction.run(() -> reformat(project, document)), NAME, null);
+      WriteAction.run(() -> reformat(project, document)), VcsBundle.message("commit.message.intention.family.name.reformat.commit.message"), null);
   }
 
-  @CalledWithWriteLock
+  @RequiresWriteLock
   public static void reformat(@NotNull Project project, @NotNull Document document) {
-    List<BaseCommitMessageInspection> inspections = getEnabledInspections(project).collect(toList());
+    List<BaseCommitMessageInspection> inspections = getEnabledInspections(project).toList();
 
     inspections.forEach(inspection -> inspection.reformat(project, document));
-  }
-
-  @Nullable
-  private static Document getCommitMessage(@NotNull AnActionEvent e) {
-    CommitMessage commitMessage = tryCast(e.getData(VcsDataKeys.COMMIT_MESSAGE_CONTROL), CommitMessage.class);
-    Editor editor = commitMessage != null ? commitMessage.getEditorField().getEditor() : null;
-
-    return editor != null ? editor.getDocument() : null;
   }
 
   @NotNull
