@@ -1,26 +1,27 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.idea.devkit.run;
 
 import com.intellij.execution.JUnitPatcher;
 import com.intellij.execution.configurations.JavaParameters;
 import com.intellij.execution.configurations.ParametersList;
+import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.module.Module;
+import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.projectRoots.*;
 import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.ThrowableComputable;
 import com.intellij.openapi.util.UserDataHolder;
-import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.openapi.util.registry.Registry;
-import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.psi.JavaPsiFacade;
-import com.intellij.psi.PsiClass;
+import com.intellij.psi.search.FilenameIndex;
 import com.intellij.psi.search.GlobalSearchScope;
-import com.intellij.util.ArrayUtil;
-import com.intellij.util.lang.UrlClassLoader;
+import com.intellij.psi.search.ProjectScope;
+import com.intellij.util.JavaModuleOptions;
+import com.intellij.util.system.OS;
+import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.idea.devkit.module.PluginModuleType;
@@ -31,63 +32,77 @@ import org.jetbrains.idea.devkit.util.PsiUtil;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
 
-/**
- * @author anna
- */
-public class JUnitDevKitPatcher extends JUnitPatcher {
+final class JUnitDevKitPatcher extends JUnitPatcher {
   private static final Logger LOG = Logger.getInstance(JUnitDevKitPatcher.class);
-  private static final String SYSTEM_CL_PROPERTY = "java.system.class.loader";
+  static final String SYSTEM_CL_PROPERTY = "java.system.class.loader";
+  private static final Key<Boolean> LOADER_VALID = Key.create("LOADER_VALID_9");
 
   @Override
   public void patchJavaParameters(@NotNull Project project, @Nullable Module module, JavaParameters javaParameters) {
     Sdk jdk = javaParameters.getJdk();
-    if (jdk == null) return;
+    if (jdk == null) {
+      return;
+    }
 
     ParametersList vm = javaParameters.getVMParametersList();
 
-    if (PsiUtil.isIdeaProject(project) && !vm.hasProperty(SYSTEM_CL_PROPERTY)) {
-      String qualifiedName = UrlClassLoader.class.getName();
-      if (loaderValid(project, module, qualifiedName, jdk)) {
-        vm.addProperty(SYSTEM_CL_PROPERTY, qualifiedName);
+    if (PsiUtil.isIdeaProject(project)) {
+      if (!vm.hasProperty(SYSTEM_CL_PROPERTY) && !vm.getList().contains("--add-modules")) {
+        // check that UrlClassLoader is available in the test module classpath
+        // if module-path is used, skip custom loader
+        String qualifiedName = "com.intellij.util.lang.UrlClassLoader";
+        if (loaderValid(project, module, qualifiedName)) {
+          vm.addProperty(SYSTEM_CL_PROPERTY, qualifiedName);
+        }
       }
-    }
-    
-    if (Registry.is("idea.lazy.classloading.caches") &&
-        vm.hasProperty(SYSTEM_CL_PROPERTY) && 
-        UrlClassLoader.class.getName().equals(vm.getPropertyValue(SYSTEM_CL_PROPERTY))) {
-      vm.addProperty("idea.lazy.classloading.caches", "true");
+      String basePath = project.getBasePath();
+      if (!vm.hasProperty(PathManager.PROPERTY_SYSTEM_PATH)) {
+        assert basePath != null;
+        vm.addProperty(PathManager.PROPERTY_SYSTEM_PATH, Path.of(basePath, "system/test").toAbsolutePath().toString());
+      }
+      if (!vm.hasProperty(PathManager.PROPERTY_CONFIG_PATH)) {
+        assert basePath != null;
+        vm.addProperty(PathManager.PROPERTY_CONFIG_PATH, Path.of(basePath, "config/test").toAbsolutePath().toString());
+      }
+
+      appendAddOpensWhenNeeded(project, jdk, vm);
     }
 
     jdk = IdeaJdk.findIdeaJdk(jdk);
-    if (jdk == null) return;
-
-    String libPath = jdk.getHomePath() + File.separator + "lib";
-    String bootJarPath = libPath + File.separator + "boot.jar";
-    if (new File(bootJarPath).exists()) {
-      //there is no need to add boot.jar in modern IDE builds (181.*)
-      vm.add("-Xbootclasspath/a:" + bootJarPath);
+    if (jdk == null) {
+      return;
     }
+
+    @NonNls String libPath = jdk.getHomePath() + File.separator + "lib";
 
     if (!vm.hasProperty("idea.load.plugins.id") && module != null && PluginModuleType.isOfType(module)) {
       //non-optional dependencies of 'idea.load.plugin.id' are automatically enabled (see com.intellij.ide.plugins.PluginManagerCore.detectReasonToNotLoad)
       //we need to explicitly add optional dependencies to properly test them
       List<String> ids = DescriptorUtil.getPluginAndOptionalDependenciesIds(module);
       if (!ids.isEmpty()) {
-        vm.defineProperty("idea.load.plugins.id", StringUtil.join(ids, ","));
+        vm.defineProperty("idea.load.plugins.id", String.join(",", ids));
       }
     }
 
-    File sandboxHome = getSandboxPath(jdk);
+    Path sandboxHome = getSandboxPath(jdk);
     if (sandboxHome != null) {
-      if (!vm.hasProperty("idea.home.path")) {
-        File homeDir = new File(sandboxHome, "test");
-        FileUtil.createDirectory(homeDir);
+      if (!vm.hasProperty(PathManager.PROPERTY_HOME_PATH)) {
+        Path homeDir = sandboxHome.resolve("test");
+        try {
+          Files.createDirectories(homeDir);
+        }
+        catch (IOException e) {
+          LOG.error(e);
+        }
+
         String buildNumber = IdeaJdk.getBuildNumber(jdk.getHomePath());
         if (buildNumber != null) {
           try {
-            FileUtil.writeToFile(new File(homeDir, "build.txt"), buildNumber);
+            Files.writeString(homeDir.resolve("build.txt"), buildNumber);
           }
           catch (IOException e) {
             LOG.warn("failed to create build.txt in " + homeDir + ": " + e.getMessage(), e);
@@ -96,10 +111,10 @@ public class JUnitDevKitPatcher extends JUnitPatcher {
         else {
           LOG.warn("Cannot determine build number for " + jdk.getHomePath());
         }
-        vm.defineProperty("idea.home.path", homeDir.getAbsolutePath());
+        vm.defineProperty(PathManager.PROPERTY_HOME_PATH, homeDir.toString());
       }
-      if (!vm.hasProperty("idea.plugins.path")) {
-        vm.defineProperty("idea.plugins.path", new File(sandboxHome, "plugins").getAbsolutePath());
+      if (!vm.hasProperty(PathManager.PROPERTY_PLUGINS_PATH)) {
+        vm.defineProperty(PathManager.PROPERTY_PLUGINS_PATH, sandboxHome.resolve("plugins").toString());
       }
     }
 
@@ -108,50 +123,55 @@ public class JUnitDevKitPatcher extends JUnitPatcher {
     javaParameters.getClassPath().addFirst(((JavaSdkType)jdk.getSdkType()).getToolsPath(jdk));
   }
 
-  private static final Key<Boolean> LOADER_VALID_8 = Key.create("LOADER_VALID_8");
-  private static final Key<Boolean> LOADER_VALID_9 = Key.create("LOADER_VALID_9");
-
-  private static boolean loaderValid(Project project, Module module, String qualifiedName, Sdk jdk) {
-    boolean jdk9 = JavaSdk.getInstance().isOfVersionOrHigher(jdk, JavaSdkVersion.JDK_1_9);
-    if (jdk9 && !Registry.is("idea.use.loader.for.jdk9")) {
-      return false;
+  static void appendAddOpensWhenNeeded(@NotNull Project project, @NotNull Sdk jdk, @NotNull ParametersList vm) {
+    var sdkVersion = ((JavaSdk)jdk.getSdkType()).getVersion(jdk);
+    if (sdkVersion != null && sdkVersion.isAtLeast(JavaSdkVersion.JDK_17)) {
+      var scope = ProjectScope.getContentScope(project);
+      var files = ReadAction.compute(() -> FilenameIndex.getVirtualFilesByName("OpenedPackages.txt", scope));
+      if (files.size() > 1) {
+        LOG.error("expecting 1 file, found: " + files);
+      }
+      else if (!files.isEmpty()) {
+        var file = files.iterator().next();
+        try (var stream = file.getInputStream()) {
+          JavaModuleOptions.readOptions(stream, OS.CURRENT).forEach(vm::add);
+        }
+        catch (ProcessCanceledException e) {
+          throw e; //unreachable
+        }
+        catch (Throwable e) {
+          LOG.error("Failed to load --add-opens list from 'OpenedPackages.txt'", e);
+        }
+      }
     }
-    UserDataHolder holder = module != null ? module : project;
-    Key<Boolean> cacheKey = jdk9 ? LOADER_VALID_9 : LOADER_VALID_8;
-    Boolean res = holder.getUserData(cacheKey);
-    if (res == null) {
-      res = ReadAction.compute(() -> {
-        //noinspection RedundantCast
-        return DumbService.getInstance(project).computeWithAlternativeResolveEnabled((ThrowableComputable<Boolean, RuntimeException>)() -> {
-          PsiClass aClass = JavaPsiFacade.getInstance(project).findClass(qualifiedName, module != null ? GlobalSearchScope
-            .moduleWithDependenciesAndLibrariesScope(module) : GlobalSearchScope.allScope(project));
-          if (aClass != null) {
-            if (jdk9) {
-              PsiClass builder = aClass.findInnerClassByName(UrlClassLoader.Builder.class.getSimpleName(), false);
-              return builder != null && !ArrayUtil.isEmpty(builder.findMethodsByName("urlsFromAppClassLoader"));
-            }
-            else {
-              return true;
-            }
-          }
-          return false;
-        });
-      });
-      holder.putUserData(cacheKey, res);
-    }
-    return res;
   }
 
-  @Nullable
-  private static File getSandboxPath(final Sdk jdk) {
+  static boolean loaderValid(Project project, Module module, String qualifiedName) {
+    UserDataHolder holder = module == null ? project : module;
+    Key<Boolean> cacheKey = LOADER_VALID;
+    Boolean result = holder.getUserData(cacheKey);
+    if (result == null) {
+      result = ReadAction.compute(() -> {
+        //noinspection RedundantCast
+        return DumbService.getInstance(project).computeWithAlternativeResolveEnabled((ThrowableComputable<Boolean, RuntimeException>)() -> {
+          GlobalSearchScope scope = module != null ? GlobalSearchScope.moduleRuntimeScope(module, true)
+                                                   : GlobalSearchScope.allScope(project);
+          return JavaPsiFacade.getInstance(project).findClass(qualifiedName, scope) != null;
+        });
+      });
+      holder.putUserData(cacheKey, result);
+    }
+    return result;
+  }
+
+  private static @Nullable Path getSandboxPath(Sdk jdk) {
     SdkAdditionalData additionalData = jdk.getSdkAdditionalData();
     if (additionalData instanceof Sandbox) {
       String sandboxHome = ((Sandbox)additionalData).getSandboxHome();
       if (sandboxHome != null) {
-        return new File(FileUtil.toCanonicalPath(sandboxHome));
+        return Path.of(sandboxHome).normalize().toAbsolutePath();
       }
     }
-
     return null;
   }
 }
