@@ -18,18 +18,16 @@ package org.jetbrains.plugins.gradle.service.execution;
 import org.gradle.internal.impldep.com.google.common.collect.ImmutableList;
 import org.junit.Test;
 
-import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.List;
 
-import static com.intellij.openapi.util.io.FileUtil.filesEqual;
-import static com.intellij.openapi.util.io.FileUtil.loadFile;
 import static com.intellij.testFramework.UsefulTestCase.*;
 import static com.intellij.util.containers.ContainerUtil.emptyList;
-import static org.jetbrains.plugins.gradle.service.execution.GradleExecutionHelper.mergeJvmArgs;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.jetbrains.plugins.gradle.service.execution.GradleExecutionHelper.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
 
 public class GradleExecutionHelperTest {
 
@@ -44,7 +42,7 @@ public class GradleExecutionHelperTest {
       "/tmp/asLocalRepo1004.gradle"
     );
 
-    List<String> obfuscatedArgs = GradleExecutionHelper.obfuscatePasswordParameters(originalArgs);
+    List<String> obfuscatedArgs = obfuscatePasswordParameters(originalArgs);
 
     List<String> expectedArgs = ImmutableList.of(
       "--configure-on-demand",
@@ -60,31 +58,27 @@ public class GradleExecutionHelperTest {
 
   @Test
   public void testWriteToFileGradleInitScript() throws IOException {
-    String prefix = "init";
+    var prefix = "init";
 
-    File tempFile = GradleExecutionHelper.writeToFileGradleInitScript("foo", prefix);
-    assertTrue(tempFile.exists());
-    assertEquals("foo", loadFile(tempFile));
+    var tempFile = GradleInitScriptUtil.createInitScript(prefix, "foo");
+    assertEquals("foo", Files.readString(tempFile));
+    assertEquals(tempFile, GradleInitScriptUtil.createInitScript(prefix, "foo"));
 
-    assertTrue(filesEqual(tempFile, GradleExecutionHelper.writeToFileGradleInitScript("foo", prefix)));
+    var anotherTempFile = GradleInitScriptUtil.createInitScript(prefix, "bar");
+    assertEquals("bar", Files.readString(anotherTempFile));
+    assertEquals(anotherTempFile, GradleInitScriptUtil.createInitScript(prefix, "bar"));
 
-    File anotherTempFile = GradleExecutionHelper.writeToFileGradleInitScript("bar", prefix);
-    assertTrue(anotherTempFile.exists());
-    assertEquals("bar", loadFile(anotherTempFile));
-
-    assertFalse(filesEqual(tempFile, anotherTempFile));
-
-    assertTrue(filesEqual(anotherTempFile, GradleExecutionHelper.writeToFileGradleInitScript("bar", prefix)));
+    assertNotEquals(tempFile, anotherTempFile);
   }
 
   @Test
   public void testMergeJvmArgs() {
-    assertOrderedEquals(mergeJvmArgs(Arrays.asList("-X:foo"), emptyList()), Arrays.asList("-X:foo"));
-    assertOrderedEquals(mergeJvmArgs(emptyList(), Arrays.asList("-X:foo")), Arrays.asList("-X:foo"));
-    assertOrderedEquals(mergeJvmArgs(Arrays.asList("-Dp=val"), Arrays.asList("-Dp=newVal")), Arrays.asList("-Dp=newVal"));
+    assertOrderedEquals(mergeJvmArgs(List.of("-X:foo"), emptyList()), List.of("-X:foo"));
+    assertOrderedEquals(mergeJvmArgs(emptyList(), List.of("-X:foo")), List.of("-X:foo"));
+    assertOrderedEquals(mergeJvmArgs(List.of("-Dp=val"), List.of("-Dp=newVal")), List.of("-Dp=newVal"));
 
     assertOrderedEquals(
-      mergeJvmArgs(Arrays.asList("-X:foo"), Arrays.asList("-Dp=v")),
+      mergeJvmArgs(List.of("-X:foo"), List.of("-Dp=v")),
       Arrays.asList("-X:foo", "-Dp=v"));
 
     assertOrderedEquals(
@@ -93,9 +87,8 @@ public class GradleExecutionHelperTest {
       Arrays.asList("-X:foo", "-Foo", "bar=003", "-Foo", "baz=002", "-Dp=v"));
 
 
-    List<String> jvmArgs = mergeJvmArgs(null,
-                                        Arrays.asList("-Xmx256", "--add-opens", "java.base/java.util=ALL-UNNAMED"),
-                                        Arrays.asList("-Xmx512", "--add-opens", "java.base/java.lang=ALL-UNNAMED"));
+    List<String> jvmArgs = mergeBuildJvmArguments(Arrays.asList("-Xmx256", "--add-opens", "java.base/java.util=ALL-UNNAMED"),
+                                                  Arrays.asList("-Xmx512", "--add-opens", "java.base/java.lang=ALL-UNNAMED"));
     assertDoesntContain(jvmArgs, "-Xmx256", "--add-opens", "java.base/java.util=ALL-UNNAMED", "java.base/java.lang=ALL-UNNAMED");
     assertContainsElements(jvmArgs, "-Xmx512");
   }
