@@ -1,15 +1,16 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.plugins.groovy.swingBuilder;
 
 import com.google.common.collect.ImmutableMap;
 import com.intellij.openapi.util.Key;
+import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.UserDataHolderEx;
 import com.intellij.psi.*;
 import com.intellij.psi.scope.ElementClassHint;
 import com.intellij.psi.scope.PsiScopeProcessor;
 import com.intellij.psi.search.GlobalSearchScope;
-import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.MultiMap;
+import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.groovy.extensions.NamedArgumentDescriptor;
@@ -25,16 +26,13 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 
-/**
- * @author Sergey Evdokimov
- */
 public class SwingBuilderNonCodeMemberContributor extends NonCodeMembersContributor {
 
   private static final Key<MultiMap<String, PsiMethod>> KEY = Key.create("SwingBuilderNonCodeMemberContributor.KEY");
 
-  private static final Object METHOD_KIND = "SwingBuilder_builder_method";
+  @NonNls private static final Object METHOD_KIND = "SwingBuilder_builder_method";
 
-  private static class MyBuilder {
+  private static final class MyBuilder {
     private final PsiManager myManager;
     private final MultiMap<String, PsiMethod> myResult = new MultiMap<>();
     private final GlobalSearchScope myResolveScope;
@@ -101,18 +99,18 @@ public class SwingBuilderNonCodeMemberContributor extends NonCodeMembersContribu
       res.setReturnType(type(returnType));
       res.setContainingClass(mySwingBuilderClass);
       if (navigationClass != null) {
-        assert navigationClass.startsWith("groovy.swing.");
+        assert navigationClass.startsWith("groovy.swing."); // NON-NLS
         res.setNavigationClass(navigationClass);
       }
       return res;
     }
 
-    private void methodObject(String name, String returnType, @Nullable String navigationClass) {
+    private void methodObject(@NlsSafe String name, String returnType, @Nullable String navigationClass) {
       methodObject(name, returnType, navigationClass, null);
     }
 
-    private void methodObject(String name, String returnType, @Nullable String navigationClass,
-                              @Nullable Map<String, NamedArgumentDescriptor> namedArg) {
+    private void methodObject(@NlsSafe String name, @NlsSafe String returnType, @Nullable String navigationClass,
+                              @Nullable Map<@NlsSafe String, NamedArgumentDescriptor> namedArg) {
       MyMethodBuilder method = method(name, returnType, navigationClass);
       method.addParameter("map", type(CommonClassNames.JAVA_UTIL_MAP), true);
       method.addParameter("params", MANY_OBJECTS);
@@ -162,14 +160,13 @@ public class SwingBuilderNonCodeMemberContributor extends NonCodeMembersContribu
       methodObject("map", CommonClassNames.JAVA_UTIL_MAP, "groovy.swing.factory.MapFactory");
 
       methodObject("imageIcon", "javax.swing.ImageIcon", "groovy.swing.factory.ImageIconFactory",
-                   ContainerUtil.<String, NamedArgumentDescriptor>immutableMapBuilder()
-                     .put("image", new TypeCondition(type("java.awt.Image")))
-                     .put("url", new TypeCondition(type("java.net.URL")))
-                     .put("file", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("resource", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("class", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("description", NamedArgumentDescriptor.TYPE_STRING)
-                     .build());
+                   Map.of(
+                     "image", new TypeCondition(type("java.awt.Image")),
+                     "url", new TypeCondition(type("java.net.URL")),
+                     "file", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "resource", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "class", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "description", NamedArgumentDescriptor.TYPE_STRING));
 
       methodObject("buttonGroup", "javax.swing.BoxLayout", "groovy.swing.factory.ButtonGroupFactory");
 
@@ -180,19 +177,18 @@ public class SwingBuilderNonCodeMemberContributor extends NonCodeMembersContribu
 
       // registerBinding()
       methodObject("bind", "org.codehaus.groovy.binding.FullBinding", "groovy.swing.factory.BindFactory",
-                   ContainerUtil.<String, NamedArgumentDescriptor>immutableMapBuilder()
-                     .put("source", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("target", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("update", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("targetProperty", NamedArgumentDescriptor.TYPE_STRING)
-                     .put("mutual", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("sourceEvent", NamedArgumentDescriptor.TYPE_STRING)
-                     .put("sourceValue", NamedArgumentDescriptor.TYPE_CLOSURE)
-                     .put("sourceProperty", NamedArgumentDescriptor.TYPE_STRING)
-                     .put("value", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("bind", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("group", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .build());
+                    Map.ofEntries(
+                     Map.entry("source", NamedArgumentDescriptor.SIMPLE_ON_TOP),
+                     Map.entry("target", NamedArgumentDescriptor.SIMPLE_ON_TOP),
+                     Map.entry("update", NamedArgumentDescriptor.SIMPLE_ON_TOP),
+                     Map.entry("targetProperty", NamedArgumentDescriptor.TYPE_STRING),
+                     Map.entry("mutual", NamedArgumentDescriptor.SIMPLE_ON_TOP),
+                     Map.entry("sourceEvent", NamedArgumentDescriptor.TYPE_STRING),
+                     Map.entry("sourceValue", NamedArgumentDescriptor.TYPE_CLOSURE),
+                     Map.entry("sourceProperty", NamedArgumentDescriptor.TYPE_STRING),
+                     Map.entry("value", NamedArgumentDescriptor.SIMPLE_ON_TOP),
+                     Map.entry("bind", NamedArgumentDescriptor.SIMPLE_ON_TOP),
+                     Map.entry("group", NamedArgumentDescriptor.SIMPLE_ON_TOP)));
 
       methodObject("bindProxy", "org.codehaus.groovy.binding.BindingProxy", "groovy.swing.factory.BindProxyFactory",
                    ImmutableMap.of("bind", NamedArgumentDescriptor.SIMPLE_ON_TOP));
@@ -213,24 +209,22 @@ public class SwingBuilderNonCodeMemberContributor extends NonCodeMembersContribu
 
       // registerWindows()
       methodObject("dialog", "javax.swing.JDialog", "groovy.swing.factory.DialogFactory",
-                   ContainerUtil.<String, NamedArgumentDescriptor>immutableMapBuilder()
-                     .put("owner", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("defaultButtonProperty", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("pack", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("show", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .build());
+                   Map.of("owner", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                          "defaultButtonProperty", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                          "pack", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                          "show", NamedArgumentDescriptor.SIMPLE_ON_TOP));
 
       methodObject("fileChooser", "javax.swing.JFileChooser", null);
 
-      methodObject("frame", "javax.swing.JFrame", "groovy.swing.factory.FrameFactory", ImmutableMap
+      methodObject("frame", "javax.swing.JFrame", "groovy.swing.factory.FrameFactory", Map
         .of("pack", NamedArgumentDescriptor.SIMPLE_ON_TOP, "show", NamedArgumentDescriptor.SIMPLE_ON_TOP));
 
       methodObject("optionPane", "javax.swing.JOptionPane", null);
 
       methodObject("window", "javax.swing.JWindow", "groovy.swing.factory.WindowFactory",
-                   ImmutableMap.of("pack", NamedArgumentDescriptor.SIMPLE_ON_TOP,
-                                   "show", NamedArgumentDescriptor.SIMPLE_ON_TOP,
-                                   "owner", NamedArgumentDescriptor.SIMPLE_ON_TOP));
+                   Map.of("pack", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                          "show", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                          "owner", NamedArgumentDescriptor.SIMPLE_ON_TOP));
 
       // registerActionButtonWidgets()
       methodObject("button", "javax.swing.JButton", "groovy.swing.factory.RichActionWidgetFactory");
@@ -376,43 +370,40 @@ public class SwingBuilderNonCodeMemberContributor extends NonCodeMembersContribu
 
       NamedArgumentDescriptor namedArgColor = new TypeCondition(type("java.awt.Color"));
 
-      Map<String, NamedArgumentDescriptor> m = ContainerUtil.<String, NamedArgumentDescriptor>immutableMapBuilder()
-        .put("parent", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-        .put("highlight", namedArgColor)
-        .put("shadow", namedArgColor)
-        .put("highlightOuter", namedArgColor)
-        .put("highlightInner", namedArgColor)
-        .put("shadowOuter", namedArgColor)
-        .put("shadowInner", namedArgColor)
-        .build();
+      Map<@NlsSafe String, NamedArgumentDescriptor> m = Map.of(
+        "parent", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+        "highlight", namedArgColor,
+        "shadow", namedArgColor,
+        "highlightOuter", namedArgColor,
+        "highlightInner", namedArgColor,
+        "shadowOuter", namedArgColor,
+        "shadowInner", namedArgColor);
 
       methodObject("loweredBevelBorder", "javax.swing.border.Border", "groovy.swing.factory.BevelBorderFactory", m);
       methodObject("raisedBevelBorder", "javax.swing.border.Border", "groovy.swing.factory.BevelBorderFactory", m);
 
-      m = ImmutableMap.of(
+      m = Map.of(
         "parent", NamedArgumentDescriptor.SIMPLE_ON_TOP,
         "highlight", namedArgColor,
-        "shadow", namedArgColor
-      );
+        "shadow", namedArgColor);
 
       methodObject("etchedBorder", "javax.swing.border.Border", "groovy.swing.factory.EtchedBorderFactory", m);
       methodObject("loweredEtchedBorder", "javax.swing.border.Border", "groovy.swing.factory.EtchedBorderFactory", m);
       methodObject("raisedEtchedBorder", "javax.swing.border.Border", "groovy.swing.factory.EtchedBorderFactory", m);
 
       methodObject("titledBorder", "javax.swing.border.TitledBorder", "groovy.swing.factory.TitledBorderFactory",
-                   ContainerUtil.<String, NamedArgumentDescriptor>immutableMapBuilder()
-                     .put("parent", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("title", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("position", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("justification", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("border", new TypeCondition(type("javax.swing.border.Border")))
-                     .put("color", namedArgColor)
-                     .put("font", new TypeCondition(type("java.awt.Font")))
-                     .build());
+                   Map.of(
+                     "parent", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "title", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "position", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "justification", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "border", new TypeCondition(type("javax.swing.border.Border")),
+                     "color", namedArgColor,
+                     "font", new TypeCondition(type("java.awt.Font"))));
 
       methodObject("emptyBorder", "javax.swing.border.Border", "groovy.swing.factory.EmptyBorderFactory");
       methodObject("emptyBorder", "javax.swing.border.Border", "groovy.swing.factory.EmptyBorderFactory");
-      methodObject("emptyBorder", "javax.swing.border.Border", "groovy.swing.factory.EmptyBorderFactory", ImmutableMap.of(
+      methodObject("emptyBorder", "javax.swing.border.Border", "groovy.swing.factory.EmptyBorderFactory", Map.of(
         "parent", NamedArgumentDescriptor.SIMPLE_ON_TOP,
         "top", NamedArgumentDescriptor.TYPE_INTEGER,
         "left", NamedArgumentDescriptor.TYPE_INTEGER,
@@ -420,23 +411,22 @@ public class SwingBuilderNonCodeMemberContributor extends NonCodeMembersContribu
         "right", NamedArgumentDescriptor.TYPE_INTEGER
       ));
 
-      methodObject("compoundBorder", "javax.swing.border.CompoundBorder", "groovy.swing.factory.CompoundBorderFactory", ImmutableMap.of(
+      methodObject("compoundBorder", "javax.swing.border.CompoundBorder", "groovy.swing.factory.CompoundBorderFactory", Map.of(
         "parent", NamedArgumentDescriptor.SIMPLE_ON_TOP,
         "inner", new TypeCondition(type("javax.swing.border.Border")),
         "outer", new TypeCondition(type("javax.swing.border.Border"))
       ));
 
       methodObject("matteBorder", "javax.swing.border.Border", "groovy.swing.factory.MatteBorderFactory",
-                   ContainerUtil.<String, NamedArgumentDescriptor>immutableMapBuilder()
-                     .put("parent", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("icon", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("color", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("size", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("top", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("left", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("bottom", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .put("right", NamedArgumentDescriptor.SIMPLE_ON_TOP)
-                     .build());
+                   Map.of(
+                     "parent", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "icon", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "color", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "size", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "top", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "left", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "bottom", NamedArgumentDescriptor.SIMPLE_ON_TOP,
+                     "right", NamedArgumentDescriptor.SIMPLE_ON_TOP));
 
       // registerRenderers()
       methodObject("tableCellRenderer", "groovy.swing.impl.ClosureRenderer", "groovy.swing.factory.RendererFactory");
