@@ -1,21 +1,10 @@
-/*
- * Copyright 2000-2009 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.junit3;
 
-import com.intellij.rt.execution.junit.*;
+import com.intellij.rt.execution.junit.ComparisonDetailsExtractor;
+import com.intellij.rt.execution.junit.ComparisonFailureData;
+import com.intellij.rt.execution.junit.IDEAJUnitListener;
+import com.intellij.rt.execution.junit.MapSerializerUtil;
 import com.intellij.rt.junit.DeafStream;
 import com.intellij.rt.junit.IdeaTestRunner;
 import junit.framework.*;
@@ -26,19 +15,21 @@ import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.util.*;
 
-public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
+public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner<Test> {
   private SMTestListener myTestsListener;
-  private ArrayList myListeners;
+  private ArrayList<String> myListeners;
 
   public JUnit3IdeaTestRunner() {
     super(DeafStream.DEAF_PRINT_STREAM);
   }
 
-  public void createListeners(ArrayList listeners, int count) {
+  @Override
+  public void createListeners(ArrayList<String> listeners, int count) {
     myTestsListener = new SMTestListener();
     myListeners = listeners;
   }
 
+  @Override
   public int startRunnerWithArgs(String[] args, String name, int count, boolean sendTree) {
     setPrinter(new MockResultPrinter());
     try {
@@ -52,51 +43,61 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
     }
   }
 
+  @Override
   public void clearStatus() {
     super.clearStatus();
   }
 
+  @Override
   public void runFailed(String message) {
     super.runFailed(message);
   }
 
-  public Object getTestToStart(String[] args, String name) {
+  @Override
+  public Test getTestToStart(String[] args, String name) {
     return TestRunnerUtil.getTestSuite(this, args);
   }
 
-  public List getChildTests(Object description) {
-    return getTestCasesOf((Test)description);
+  @Override
+  public List<Test> getChildTests(Test description) {
+    return getTestCasesOf(description);
   }
 
-  public String getTestClassName(Object child) {
+  @Override
+  public String getTestClassName(Test child) {
     return child instanceof TestSuite ? ((TestSuite)child).getName() : child.getClass().getName();
   }
 
-  public String getStartDescription(Object child) {
-    final Test test = (Test)child;
-    if (test instanceof TestCase) {
-      return test.getClass().getName() + "," + ((TestCase)test).getName();
+  @Override
+  public String getStartDescription(Test child) {
+    if (child instanceof TestCase) {
+      return child.getClass().getName() + "," + ((TestCase)child).getName();
     }
-    return test.toString();
+    return child.toString();
   }
 
+  @Override
   protected TestResult createTestResult() {
     TestResult testResult = super.createTestResult();
     testResult.addListener(myTestsListener);
     try {
-      for (int i = 0; i < myListeners.size(); i++) {
-        final IDEAJUnitListener junitListener = (IDEAJUnitListener)Class.forName((String)myListeners.get(i)).newInstance();
+      for (String listener : myListeners) {
+        final IDEAJUnitListener junitListener = Class.forName(listener).asSubclass(IDEAJUnitListener.class).getConstructor().newInstance();
         testResult.addListener(new TestListener() {
+          @Override
           public void addError(Test test, Throwable t) {}
 
+          @Override
           public void addFailure(Test test, AssertionFailedError t) {}
 
+          @Override
           public void endTest(Test test) {
             if (test instanceof TestCase) {
               junitListener.testFinished(test.getClass().getName(), ((TestCase)test).getName());
             }
           }
 
+          @Override
           public void startTest(Test test) {
             if (test instanceof TestCase) {
               junitListener.testStarted(test.getClass().getName(), ((TestCase)test).getName());
@@ -111,6 +112,7 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
     return testResult;
   }
 
+  @Override
   public TestResult doRun(Test suite, boolean wait) {  //todo
     final TestResult testResult = super.doRun(suite, wait);
     myTestsListener.finishSuite();
@@ -118,18 +120,18 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
     return testResult;
   }
 
-  static Vector getTestCasesOf(Test test) {
-    Vector testCases = new Vector();
+  static List<Test> getTestCasesOf(Test test) {
+    List<Test> testCases = new ArrayList<>();
     if (test instanceof TestRunnerUtil.SuiteMethodWrapper) {
       test = ((TestRunnerUtil.SuiteMethodWrapper)test).getSuite();
     }
     if (test instanceof TestSuite) {
       TestSuite testSuite = (TestSuite)test;
 
-      for (Enumeration each = testSuite.tests(); each.hasMoreElements();) {
-        Object childTest = each.nextElement();
+      for (Enumeration<Test> each = testSuite.tests(); each.hasMoreElements();) {
+        Test childTest = each.nextElement();
         if (childTest instanceof TestSuite && !((TestSuite)childTest).tests().hasMoreElements()) continue;
-        testCases.addElement(childTest);
+        testCases.add(childTest);
       }
     }
     return testCases;
@@ -145,12 +147,13 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
     private String myClassName;
     private long myCurrentTestStart;
 
+    @Override
     public void addError(Test test, Throwable e) {
       testFailure(e, MapSerializerUtil.TEST_FAILED, getMethodName(test));
     }
 
     private void testFailure(Throwable failure, String messageName, String methodName) {
-      final Map attrs = new HashMap();
+      final Map<String, String> attrs = new HashMap<>();
       attrs.put("name", methodName);
       final long duration = System.currentTimeMillis() - myCurrentTestStart;
       if (duration > 0) {
@@ -159,10 +162,8 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
       try {
         final String trace = getTrace(failure);
         ComparisonFailureData notification = null;
-        if (failure instanceof FileComparisonFailure) {
-          final FileComparisonFailure comparisonFailure = (FileComparisonFailure)failure;
-          notification = new ComparisonFailureData(comparisonFailure.getExpected(), comparisonFailure.getActual(), 
-                                                   comparisonFailure.getFilePath(), comparisonFailure.getActualFilePath());
+        if (failure.getClass().getName().equals("com.intellij.rt.execution.junit.FileComparisonFailure")) {
+          notification = ComparisonFailureData.create(failure);
         }
         else if (failure instanceof ComparisonFailure || failure.getClass().getName().equals("org.junit.ComparisonFailure")) {
           notification = new ComparisonFailureData(ComparisonDetailsExtractor.getExpected(failure), ComparisonDetailsExtractor.getActual(failure));
@@ -199,33 +200,36 @@ public class JUnit3IdeaTestRunner extends TestRunner implements IdeaTestRunner {
       return braceIdx > 0 && toString.endsWith(")") ? toString.substring(braceIdx + 1, toString.length() - 1) : null;
     }
 
+    @Override
     public void addFailure(Test test, AssertionFailedError e) {
       addError(test, e);
     }
 
+    @Override
     public void endTest(Test test) {
       final long duration = System.currentTimeMillis() - myCurrentTestStart;
-      System.out.println("\n##teamcity[testFinished name=\'" + escapeName(getMethodName(test)) +
-                         (duration > 0 ? "\' duration=\'" + duration : "") + "\']");
+      System.out.println("\n##teamcity[testFinished name='" + escapeName(getMethodName(test)) +
+                         (duration > 0 ? "' duration='" + duration : "") + "']");
     }
 
+    @Override
     public void startTest(Test test) {
       myCurrentTestStart = System.currentTimeMillis();
       final String className = getClassName(test);
       if (className != null && !className.equals(myClassName)) {
         finishSuite();
         myClassName = className;
-        System.out.println("##teamcity[testSuiteStarted name =\'" + escapeName(myClassName) + 
-                           "\' locationHint=\'java:suite://" + escapeName(className) + "\']");
+        System.out.println("##teamcity[testSuiteStarted name ='" + escapeName(myClassName) +
+                           "' locationHint='java:suite://" + escapeName(className) + "']");
       }
       final String methodName = getMethodName(test);
-      System.out.println("##teamcity[testStarted name=\'" + escapeName(methodName) + 
-                         "\' locationHint=\'java:test://" + escapeName(className + "/" + methodName) + "\']");
+      System.out.println("##teamcity[testStarted name='" + escapeName(methodName) +
+                         "' locationHint='java:test://" + escapeName(className + "/" + methodName) + "']");
     }
 
     protected void finishSuite() {
       if (myClassName != null) {
-        System.out.println("##teamcity[testSuiteFinished name=\'" + escapeName(myClassName) + "\']");
+        System.out.println("##teamcity[testSuiteFinished name='" + escapeName(myClassName) + "']");
       }
     }
 
