@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.jetbrains.env.python.testing;
 
 import com.intellij.execution.ExecutionException;
@@ -30,9 +30,8 @@ import com.jetbrains.python.sdk.flavors.IronPythonSdkFlavor;
 import com.jetbrains.python.testing.ConfigurationTarget;
 import com.jetbrains.python.testing.PyUnitTestConfiguration;
 import com.jetbrains.python.testing.PyUnitTestFactory;
-import com.jetbrains.python.testing.PythonTestConfigurationsModel;
+import com.jetbrains.python.testing.PythonTestConfigurationType;
 import com.jetbrains.python.tools.sdkTools.SdkCreationType;
-import org.hamcrest.Matchers;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.Assert;
@@ -40,12 +39,15 @@ import org.junit.Test;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 import static com.intellij.testFramework.assertions.Assertions.assertThat;
 import static com.jetbrains.env.ut.PyScriptTestProcessRunner.TEST_TARGET_PREFIX;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.not;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUnitTestProcessRunner> {
 
@@ -93,11 +95,18 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
    */
   @Test
   public void testCantRerun() {
-    startMessagesCapture();
-
     runPythonTest(
-      new PyUnitTestLikeProcessWithConsoleTestTask<PyUnitTestProcessRunner>("/testRunner/env/unit", "test_with_skips_and_errors.py",
-                                                                            this::createTestRunner) {
+      new PyUnitTestLikeProcessWithConsoleTestTask<>("/testRunner/env/unit", "test_with_skips_and_errors.py",
+                                                     config -> {
+                                                       // Second rerun should lead to exception
+                                                       return createTestRunner(config.increaseRerunCount(2));
+                                                     }) {
+        @Override
+        protected void exceptionThrown(@NotNull Throwable e, @NotNull PyUnitTestProcessRunner runner) {
+          assertEquals("Wrong type of exception", e.getClass(), ExecutionException.class);
+          assertTrue("Exception should be thrown on the first or second rerun", runner.getCurrentRerunStep() > 0);
+          assertEquals(e.getMessage(), PyBundle.message("runcfg.tests.cant_rerun"));
+        }
 
         @Override
         protected void checkTestResults(@NotNull final PyUnitTestProcessRunner runner,
@@ -105,26 +114,11 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                         @NotNull final String stderr,
                                         @NotNull final String all, int exitCode) {
           assert runner.getFailedTestsCount() > 0 : "We need failed tests to test broken rerun";
-
-          startMessagesCapture();
-
+          assertEquals("No exception thrown or rerun, but it should", 0, runner.getCurrentRerunStep());
           EdtTestUtil.runInEdtAndWait(() -> {
+            // Delete files, so next rerun should lead to exception
             deleteAllTestFiles(myFixture);
-            runner.rerunFailedTests();
           });
-
-          final List<Throwable> throwables = getCapturesMessages().first;
-          assertThat(throwables)
-            .describedAs("Exception shall be thrown")
-            .isNotEmpty();
-          final Throwable exception = throwables.get(0);
-          assertThat(exception).isInstanceOf(ExecutionException.class);
-          assertThat(exception.getMessage()).isEqualTo(PyBundle.message("runcfg.tests.cant_rerun"));
-          assertThat(getCapturesMessages().second)
-            .describedAs("No messages displayed for exception")
-            .isNotEmpty();
-
-          stopMessageCapture();
         }
       });
   }
@@ -153,7 +147,8 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
           console.flushDeferredText();
           try {
             assertEquals("TC messages filtered in wrong way", "Hello\nI am\nPyCharm", console.getText());
-          }finally {
+          }
+          finally {
             Disposer.dispose(console);
           }
         });
@@ -200,8 +195,11 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        Assert.assertThat("No expected", stdout, Matchers.containsString("expected='1'"));
-        Assert.assertThat("No actual", stdout, Matchers.containsString("actual='2'"));
+        Assert.assertThat("No expected", stdout, containsString("expected='1'"));
+        Assert.assertThat("No actual", stdout, containsString("actual='2'"));
+        var consoleError = MockPrinter.fillPrinter(runner.getTestProxy()).getStdErr();
+        Assert.assertThat("No stacktrace", consoleError, containsString("test_test.py\", line 4,"));
+        Assert.assertThat("Garbage in stack trace", consoleError, not(containsString("diff_tools.py")));
       }
     });
   }
@@ -240,7 +238,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   public void testRenameClass() {
     runPythonTest(
       new CreateConfigurationByFileTask.CreateConfigurationTestAndRenameClassTask<>(
-        PythonTestConfigurationsModel.getPythonsUnittestName(),
+        PythonTestConfigurationType.getInstance().getUnitTestFactory().getName(),
         PyUnitTestConfiguration.class));
   }
 
@@ -252,7 +250,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
         @NotNull
         @Override
         protected PyUnitTestFactory createFactory() {
-          return new PyUnitTestFactory();
+          return PythonTestConfigurationType.getInstance().getUnitTestFactory();
         }
 
         @Override
@@ -292,11 +290,52 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
         assertEquals("Runner did not stop after first fail", 1, runner.getAllTestsCount());
-        assertEquals("Bad tree produced for failfast", "Test tree:\n" +
-                                                       "[root](-)\n" +
-                                                       ".test_test(-)\n" +
-                                                       "..SomeTestCase(-)\n" +
-                                                       "...test_1_test(-)\n", runner.getFormattedTestTree());
+        assertEquals("Bad tree produced for failfast", """
+          Test tree:
+          [root](-)
+          .test_test(-)
+          ..SomeTestCase(-)
+          ...test_1_test(-)
+          """, runner.getFormattedTestTree());
+      }
+    });
+  }
+
+  /**
+   * test should be launched from __init__.py
+   */
+  @Test
+  public void testTestInInit() {
+
+    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/testInInit", "") {
+
+      @NotNull
+      @Override
+      protected PyUnitTestProcessRunner createProcessRunner() {
+        return new PyUnitTestProcessRunner("", 0) {
+          @Override
+          protected void configurationCreatedAndWillLaunch(@NotNull final PyUnitTestConfiguration configuration) throws IOException {
+            super.configurationCreatedAndWillLaunch(configuration);
+            configuration.getTarget().setTargetType(PyRunTargetVariant.PYTHON);
+            configuration.getTarget().setTarget("mymodule.ExampleModuleTestCase");
+          }
+        };
+      }
+
+      @Override
+      protected void checkTestResults(@NotNull final PyUnitTestProcessRunner runner,
+                                      @NotNull final String stdout,
+                                      @NotNull final String stderr,
+                                      @NotNull final String all, int exitCode) {
+        assertEquals("wrong test launched", """
+          Test tree:
+          [root](+)
+          .mymodule(+)
+          ..ExampleModuleTestCase(+)
+          ...test1(+)
+          ...test2(+)
+          """, runner.getFormattedTestTree());
+        assertEquals("wrong exit code", 0, exitCode);
       }
     });
   }
@@ -320,11 +359,13 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
 
         runner.getFormattedTestTree();
         assertEquals("Skipped test with non-ascii message broke tree",
-                     "Test tree:\n" +
-                     "[root](~)\n" +
-                     ".test_test(~)\n" +
-                     "..TestCase(~)\n" +
-                     "...test(~)\n", runner.getFormattedTestTree());
+                     """
+                       Test tree:
+                       [root](~)
+                       .test_test(~)
+                       ..TestCase(~)
+                       ...test(~)
+                       """, runner.getFormattedTestTree());
         assertThat(stdout)
           .describedAs("non-ascii char broken in output")
           .contains("ошибка");
@@ -351,12 +392,14 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
         final String formattedTestTree = runner.getFormattedTestTree();
-        assertEquals("Bad tree:" + formattedTestTree, "Test tree:\n" +
-                                                      "[root](-)\n" +
-                                                      ".test_test(-)\n" +
-                                                      "..TestThis(-)\n" +
-                                                      "...test_this(-)\n" +
-                                                      "....[test](-)\n", formattedTestTree);
+        assertEquals("Bad tree:" + formattedTestTree, """
+          Test tree:
+          [root](-)
+          .test_test(-)
+          ..TestThis(-)
+          ...test_this(-)
+          ....[test](-)
+          """, formattedTestTree);
       }
     });
   }
@@ -379,8 +422,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        final MockPrinter printer = new MockPrinter();
-        runner.findTestByName("[test]").printOn(printer);
+        var printer = MockPrinter.fillPrinter(runner.findTestByName("[test]"));
         assertThat(printer.getStdErr())
           .describedAs("Subtest assertEquals broken")
           .contains("AssertionError: 'D' != 'a'");
@@ -409,17 +451,19 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String all, int exitCode) {
         assertEquals(3, runner.getFailedTestsCount());
         assertEquals(6, runner.getAllTestsCount());
-        assertEquals("Test tree:\n" +
-                     "[root](-)\n" +
-                     ".test_test(-)\n" +
-                     "..NumbersTest(-)\n" +
-                     "...test_even (Test that numbers between 0 and 5 are all even_)(-)\n" +
-                     "....(i=0)(+)\n" +
-                     "....(i=1)(-)\n" +
-                     "....(i=2)(+)\n" +
-                     "....(i=3)(-)\n" +
-                     "....(i=4)(+)\n" +
-                     "....(i=5)(-)\n", runner.getFormattedTestTree());
+        assertEquals("""
+                       Test tree:
+                       [root](-)
+                       .test_test(-)
+                       ..NumbersTest(-)
+                       ...test_even (Test that numbers between 0 and 5 are all even_)(-)
+                       ....(i=0)(+)
+                       ....(i=1)(-)
+                       ....(i=2)(+)
+                       ....(i=3)(-)
+                       ....(i=4)(+)
+                       ....(i=5)(-)
+                       """, runner.getFormattedTestTree());
       }
     });
   }
@@ -444,21 +488,23 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        assertEquals("dots in subtest names broke output", "Test tree:\n" +
-                                                           "[root](-)\n" +
-                                                           ".test_test(-)\n" +
-                                                           "..SampleTest(-)\n" +
-                                                           "...test_sample(-)\n" +
-                                                           "....(i='0_0')(-)\n" +
-                                                           "....(i='1_1')(-)\n" +
-                                                           "....(i='2_2')(+)\n" +
-                                                           "....(i='3_3')(+)\n" +
-                                                           "....(i='4_4')(+)\n" +
-                                                           "....(i='5_5')(+)\n" +
-                                                           "....(i='6_6')(+)\n" +
-                                                           "....(i='7_7')(+)\n" +
-                                                           "....(i='8_8')(+)\n" +
-                                                           "....(i='9_9')(+)\n", runner.getFormattedTestTree());
+        assertEquals("dots in subtest names broke output", """
+          Test tree:
+          [root](-)
+          .test_test(-)
+          ..SampleTest(-)
+          ...test_sample(-)
+          ....(i='0_0')(-)
+          ....(i='1_1')(-)
+          ....(i='2_2')(+)
+          ....(i='3_3')(+)
+          ....(i='4_4')(+)
+          ....(i='5_5')(+)
+          ....(i='6_6')(+)
+          ....(i='7_7')(+)
+          ....(i='8_8')(+)
+          ....(i='9_9')(+)
+          """, runner.getFormattedTestTree());
       }
     });
   }
@@ -477,13 +523,15 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        assertEquals("Output tree broken for skipped exception thrown in setup method", "Test tree:\n" +
-                                                                                        "[root](~)\n" +
-                                                                                        ".test_test(~)\n" +
-                                                                                        "..TestSimple(~)\n" +
-                                                                                        "...setUpClass(~)\n" +
-                                                                                        "..TestSubSimple(~)\n" +
-                                                                                        "...setUpClass(~)\n",
+        assertEquals("Output tree broken for skipped exception thrown in setup method", """
+                       Test tree:
+                       [root](~)
+                       .test_test(~)
+                       ..TestSimple(~)
+                       ...setUpClass(~)
+                       ..TestSubSimple(~)
+                       ...setUpClass(~)
+                       """,
                      runner.getFormattedTestTree());
       }
     });
@@ -622,21 +670,23 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull String stdout,
                                       @NotNull String stderr,
                                       @NotNull String all, int exitCode) {
-        final String expectedResult = "Test tree:\n" +
-                                      "[root](-)\n" +
-                                      ".test_subtest(-)\n" +
-                                      "..SpamTest(-)\n" +
-                                      "...test_test(-)\n" +
-                                      "....(i=0)(-)\n" +
-                                      "....(i=1)(+)\n" +
-                                      "....(i=2)(-)\n" +
-                                      "....(i=3)(+)\n" +
-                                      "....(i=4)(-)\n" +
-                                      "....(i=5)(+)\n" +
-                                      "....(i=6)(-)\n" +
-                                      "....(i=7)(+)\n" +
-                                      "....(i=8)(-)\n" +
-                                      "....(i=9)(+)\n";
+        final String expectedResult = """
+          Test tree:
+          [root](-)
+          .test_subtest(-)
+          ..SpamTest(-)
+          ...test_test(-)
+          ....(i=0)(-)
+          ....(i=1)(+)
+          ....(i=2)(-)
+          ....(i=3)(+)
+          ....(i=4)(-)
+          ....(i=5)(+)
+          ....(i=6)(-)
+          ....(i=7)(+)
+          ....(i=8)(-)
+          ....(i=9)(+)
+          """;
         final String tree = runner.getFormattedTestTree();
         assertEquals("Bad tree:" + tree + ". \nStdout:" + stdout + "\n. Stderr: " + stderr, expectedResult, tree);
       }
@@ -661,8 +711,8 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   // PY-24407
   @Test
   public void testWorkingDirectoryDependsOnRelativeImport() {
-    runPythonTest(new CreateConfigurationTestTask<PyUnitTestConfiguration>(PythonTestConfigurationsModel.getPythonsUnittestName(),
-                                                                           PyUnitTestConfiguration.class) {
+    runPythonTest(new CreateConfigurationTestTask<>(PythonTestConfigurationType.getInstance().getUnitTestFactory().getName(),
+                                                    PyUnitTestConfiguration.class) {
       @NotNull
       @Override
       protected List<PsiElement> getPsiElementsToRightClickOn() {
@@ -827,14 +877,15 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   public void testConfigurationProducerOnDirectory() {
     runPythonTest(
       new CreateConfigurationByFileTask.CreateConfigurationTestAndRenameFolderTask<>(
-        PythonTestConfigurationsModel.getPythonsUnittestName(),
+        PythonTestConfigurationType.getInstance().getUnitTestFactory().getName(),
         PyUnitTestConfiguration.class));
   }
 
 
   @Test
   public void testConfigurationProducer() {
-    runPythonTest(new CreateConfigurationByFileTask<>(PythonTestConfigurationsModel.getPythonsUnittestName(), PyUnitTestConfiguration.class));
+    runPythonTest(
+      new CreateConfigurationByFileTask<>(new PyUnitTestFactory(PythonTestConfigurationType.getInstance()).getName(), PyUnitTestConfiguration.class));
   }
 
   /**
@@ -843,14 +894,14 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @Test
   public void testConfigurationProducerObeysDefaultDir() {
     runPythonTest(
-      new CreateConfigurationByFileTask<PyUnitTestConfiguration>(PythonTestConfigurationsModel.getPythonsUnittestName(),
-                                                                 PyUnitTestConfiguration.class) {
+      new CreateConfigurationByFileTask<>(new PyUnitTestFactory(PythonTestConfigurationType.getInstance()).getName(),
+                                          PyUnitTestConfiguration.class) {
         private static final String SOME_RANDOM_DIR = "//some/random/ddir";
 
         @Override
         public void runTestOn(@NotNull final String sdkHome, @Nullable Sdk existingSdk) throws InvalidSdkException {
           // Set default working directory to some random location before actual exection
-          final PyUnitTestConfiguration templateConfiguration = getTemplateConfiguration(new PyUnitTestFactory());
+          final PyUnitTestConfiguration templateConfiguration = getTemplateConfiguration(new PyUnitTestFactory(PythonTestConfigurationType.getInstance()));
           templateConfiguration.setWorkingDirectory(SOME_RANDOM_DIR);
           super.runTestOn(sdkHome, existingSdk);
           templateConfiguration.setWorkingDirectory("");
@@ -880,10 +931,9 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
       super(relativePathToTestData, scriptName, rerunFailedTests, PythonUnitTestingTest.this::createTestRunner);
     }
 
-    @NotNull
     @Override
-    public Iterable<Class<?>> getClassesToEnableDebug() {
-      return Collections.singletonList(GeneralIdBasedToSMTRunnerEventsConvertor.class);
+    public @NotNull Collection<Class<?>> getClassesToEnableDebug() {
+      return List.of(GeneralIdBasedToSMTRunnerEventsConvertor.class);
     }
   }
 
